--- a/code/language/en-GB/en-GB.tpl_js_wright.ini
+++ b/code/language/en-GB/en-GB.tpl_js_wright.ini
@@ -1,5 +1,5 @@
 TPL_JS_WRIGHT="Joomlashack Wright"
-TPL_JS_WRIGHT_XML_DESCRIPTION="<p>This is the js_wright template by <a href='http://www.joomlashack.com'>Joomlashack</a></p>"
+TPL_JS_WRIGHT_XML_DESCRIPTION="<p><img src='../templates/js_wright/wright/images/logo.png' /></p><p>This is the js_wright template by <a href='http://www.joomlashack.com'>Joomlashack</a><br />v.3.0.4</p>"
 # fields
 TPL_JS_WRIGHT_FIELD_NEED_HELP_LABEL="Need Help?"
 TPL_JS_WRIGHT_FIELD_NEED_HELP_DESC="Start reading the Wright documentation"
