--- a/code/language/es-ES/es-ES.tpl_js_wright.ini
+++ b/code/language/es-ES/es-ES.tpl_js_wright.ini
@@ -1,5 +1,5 @@
 TPL_JS_WRIGHT="Joomlashack Wright"
-TPL_JS_WRIGHT_XML_DESCRIPTION="<p>Esta es la plantilla js_wright desarrollado por <a href='http://www.joomlashack.com'>Joomlashack</a></p>"
+TPL_JS_WRIGHT_XML_DESCRIPTION="<p><img src='../templates/js_wright/wright/images/logo.png' /></p><p>>Esta es la plantilla js_wright desarrollado por <a href='http://www.joomlashack.com'>Joomlashack</a><br />v.3.0.4</p>"
 # campos
 TPL_JS_WRIGHT_FIELD_NEED_HELP_LABEL="¿Necesitas ayuda?"
 TPL_JS_WRIGHT_FIELD_NEED_HELP_DESC="Empieza leyendo la documentación de Wright"
