--- a/code/language/en-GB/en-GB.tpl_js_wright.ini
+++ b/code/language/en-GB/en-GB.tpl_js_wright.ini
@@ -1,5 +1,5 @@
 TPL_JS_WRIGHT="Joomlashack Wright"
-TPL_JS_WRIGHT_XML_DESCRIPTION="<p style='clear:both'><img style='clear:both' src='../templates/js_wright/wright/images/logo.png' /></p><p style='clear:both'>This is the js_wright template by <a href='http://www.joomlashack.com'>Joomlashack</a><br />v.3.0.5</p>"
+TPL_JS_WRIGHT_XML_DESCRIPTION="<p style='clear:both'><img style='clear:both' src='../templates/js_wright/wright/images/logo.png' /></p><p style='clear:both'>This is the js_wright template by <a href='http://www.joomlashack.com'>Joomlashack</a><br />v.3.0.6</p>"
 # fields
 TPL_JS_WRIGHT_FIELD_NEED_HELP_LABEL="Need Help?"
 TPL_JS_WRIGHT_FIELD_NEED_HELP_DESC="Start reading the Wright documentation"
@@ -38,3 +38,5 @@ TPL_JS_WRIGHT_FIELD_BOOTSTRAP_ROW_MODE_FLUID="Fluid (%)"
 TPL_JS_WRIGHT_FIELD_BOOTSTRAP_ROW_MODE_DEFAULT="Default (px)"
 TPL_JS_WRIGHT_FIELD_ENABLE_RESPONSIVE="Enable Bootstrap's responsive behavior"
 TPL_JS_WRIGHT_FIELD_ENABLE_RESPONSIVE_DESC="You can select whether you want to have responsive behavior (mobile/tablet view)"
+TPL_JS_WRIGHT_FIELD_STICKY_FOOTER="Sticky footer"
+TPL_JS_WRIGHT_FIELD_STICKY_FOOTER_DESC="Select whether you want to force the footer to be always at the bottom of the page"
