--- a/code/language/es-ES/es-ES.tpl_js_wright.ini
+++ b/code/language/es-ES/es-ES.tpl_js_wright.ini
@@ -1,5 +1,5 @@
 TPL_JS_WRIGHT="Joomlashack Wright"
-TPL_JS_WRIGHT_XML_DESCRIPTION="<p style='clear:both'><img style='clear:both' src='../templates/js_wright/wright/images/logo.png' /></p><p style='clear:both'>Esta es la plantilla js_wright desarrollada por <a href='http://www.joomlashack.com'>Joomlashack</a><br />v.3.0.5</p>"
+TPL_JS_WRIGHT_XML_DESCRIPTION="<p style='clear:both'><img style='clear:both' src='../templates/js_wright/wright/images/logo.png' /></p><p style='clear:both'>Esta es la plantilla js_wright desarrollada por <a href='http://www.joomlashack.com'>Joomlashack</a><br />v.3.0.6</p>"
 # campos
 TPL_JS_WRIGHT_FIELD_NEED_HELP_LABEL="¿Necesitas ayuda?"
 TPL_JS_WRIGHT_FIELD_NEED_HELP_DESC="Empieza leyendo la documentación de Wright"
@@ -38,3 +38,5 @@ TPL_JS_WRIGHT_FIELD_BOOTSTRAP_ROW_MODE_FLUID="Fluida (%)"
 TPL_JS_WRIGHT_FIELD_BOOTSTRAP_ROW_MODE_DEFAULT="Por defecto (px)"
 TPL_JS_WRIGHT_FIELD_ENABLE_RESPONSIVE="Hailitar el comportamiento responsive de Bootstrap"
 TPL_JS_WRIGHT_FIELD_ENABLE_RESPONSIVE_DESC="Puede seleccionar si desea habilitar o deshabilitar el comportamiento responsive (para vistas móviles y de tablets)"
+TPL_JS_WRIGHT_FIELD_STICKY_FOOTER="Pie de página fijo"
+TPL_JS_WRIGHT_FIELD_STICKY_FOOTER_DESC="Seleccione si quiere que el pie de página siempre esté al final de la página"
