Indication in jQuery parameter

--- a/code/language/en-GB/en-GB.tpl_js_wright.ini
+++ b/code/language/en-GB/en-GB.tpl_js_wright.ini
@@ -9,7 +9,7 @@ TPL_JS_WRIGHT_FIELD_STYLE_LABEL="Style"
 TPL_JS_WRIGHT_FIELD_STYLE_DESC="Select which of the style variations you wish to use."
 TPL_JS_WRIGHT_FIELD_ENABLE_MOOTOOLS_LABEL="Load Mootools"
 TPL_JS_WRIGHT_FIELD_ENABLE_MOOTOOLS_DESC="Load or turn off Joomla core Mootools.js"
-TPL_JS_WRIGHT_FIELD_LOAD_JQUERY_LABEL="Load jQuery"
+TPL_JS_WRIGHT_FIELD_LOAD_JQUERY_LABEL="Load jQuery (applies to Joomla 2.5 only)"
 TPL_JS_WRIGHT_FIELD_LOAD_JQUERY_DESC="Control the way that jQuery gets loaded"
 TPL_JS_WRIGHT_FIELD_LOAD_JQUERY_YES_LOCALLY="Load jQuery locally"
 TPL_JS_WRIGHT_FIELD_LOAD_JQUERY_YES_GOOGLE="Load jQuery from Google"
