Added styles for bootstrap styles in article images (blog, featured and single article)

--- a/code/language/en-GB/en-GB.tpl_js_wright.ini
+++ b/code/language/en-GB/en-GB.tpl_js_wright.ini
@@ -1,6 +1,7 @@
 TPL_JS_WRIGHT="Joomlashack Wright"
 TPL_JS_WRIGHT_XML_DESCRIPTION="<p style='clear:both'><img style='clear:both' src='../templates/js_wright/wright/images/logo.png' /></p><p style='clear:both'>This is the js_wright template by <a href='http://www.joomlashack.com'>Joomlashack</a><br />v.{version}/p>"
 # fields
+JNONE=None
 TPL_JS_WRIGHT_FIELD_NEED_HELP_LABEL="Need Help?"
 TPL_JS_WRIGHT_FIELD_NEED_HELP_DESC="Start reading the Wright documentation"
 TPL_JS_WRIGHT_FIELD_REMOVE_BRANDING_LABEL="Remove Branding"
@@ -40,3 +41,8 @@ TPL_JS_WRIGHT_FIELD_ENABLE_RESPONSIVE="Enable Bootstrap's responsive behavior"
 TPL_JS_WRIGHT_FIELD_ENABLE_RESPONSIVE_DESC="You can select whether you want to have responsive behavior (mobile/tablet view)"
 TPL_JS_WRIGHT_FIELD_STICKY_FOOTER="Sticky footer"
 TPL_JS_WRIGHT_FIELD_STICKY_FOOTER_DESC="Select whether you want to force the footer to be always at the bottom of the page"
+TPL_JS_WRIGHT_BOOTSTRAP_IMAGES="Bootstrap styles for article images"
+TPL_JS_WRIGHT_BOOTSTRAP_IMAGES_DESC="Select if you want to enable your article (intro and full text) images any of the styles available, and grow them to be responsive width/height"
+TPL_JS_WRIGHT_BOOTSTRAP_IMAGES_ROUNDED="Rounded"
+TPL_JS_WRIGHT_BOOTSTRAP_IMAGES_CIRCLE="Circle"
+TPL_JS_WRIGHT_BOOTSTRAP_IMAGES_POLAROID="Polaroid"
