--- a/code/language/es-ES/es-ES.tpl_js_wright.ini
+++ b/code/language/es-ES/es-ES.tpl_js_wright.ini
@@ -1,6 +1,7 @@
 TPL_JS_WRIGHT="Joomlashack Wright"
 TPL_JS_WRIGHT_XML_DESCRIPTION="<p style='clear:both'><img style='clear:both' src='../templates/js_wright/wright/images/logo.png' /></p><p style='clear:both'>Esta es la plantilla js_wright desarrollada por <a href='http://www.joomlashack.com'>Joomlashack</a><br />v.{version}</p>"
 # campos
+JNONE=None
 TPL_JS_WRIGHT_FIELD_NEED_HELP_LABEL="¿Necesitas ayuda?"
 TPL_JS_WRIGHT_FIELD_NEED_HELP_DESC="Empieza leyendo la documentación de Wright"
 TPL_JS_WRIGHT_FIELD_REMOVE_BRANDING_LABEL="Eliminar enlace desarrollador"
@@ -40,3 +41,8 @@ TPL_JS_WRIGHT_FIELD_ENABLE_RESPONSIVE="Hailitar el comportamiento responsive de 
 TPL_JS_WRIGHT_FIELD_ENABLE_RESPONSIVE_DESC="Puede seleccionar si desea habilitar o deshabilitar el comportamiento responsive (para vistas móviles y de tablets)"
 TPL_JS_WRIGHT_FIELD_STICKY_FOOTER="Pie de página fijo"
 TPL_JS_WRIGHT_FIELD_STICKY_FOOTER_DESC="Seleccione si quiere que el pie de página siempre esté al final de la página"
+TPL_JS_WRIGHT_BOOTSTRAP_IMAGES="Estilos Bootstrap para imágenes de artículos"
+TPL_JS_WRIGHT_BOOTSTRAP_IMAGES_DESC="Seleccione si desea que las imágenes de artículos (intro y texto completo) tengan aplicado un estilo Bootstrap y ancho/alto responsive"
+TPL_JS_WRIGHT_BOOTSTRAP_IMAGES_ROUNDED="Redondeado"
+TPL_JS_WRIGHT_BOOTSTRAP_IMAGES_CIRCLE="Círculo"
+TPL_JS_WRIGHT_BOOTSTRAP_IMAGES_POLAROID="Polaroid"
