--- a/code/language/es-ES/es-ES.tpl_js_wright.ini
+++ b/code/language/es-ES/es-ES.tpl_js_wright.ini
@@ -1,7 +1,7 @@
 TPL_JS_WRIGHT="Joomlashack Wright"
 TPL_JS_WRIGHT_XML_DESCRIPTION="<p style='clear:both'><img style='clear:both' src='../templates/js_wright/wright/images/logo.png' /></p><p style='clear:both'>Esta es la plantilla js_wright desarrollada por <a href='http://www.joomlashack.com'>Joomlashack</a><br />v.{version}</p>"
 # campos
-TPL_JS_WRIGHT_NONE=None
+TPL_JS_WRIGHT_NONE=Ninguna
 TPL_JS_WRIGHT_FIELD_NEED_HELP_LABEL="¿Necesitas ayuda?"
 TPL_JS_WRIGHT_FIELD_NEED_HELP_DESC="Empieza leyendo la documentación de Wright"
 TPL_JS_WRIGHT_FIELD_REMOVE_BRANDING_LABEL="Eliminar enlace desarrollador"
