--- a/code/language/en-GB/en-GB.tpl_js_wright.ini
+++ b/code/language/en-GB/en-GB.tpl_js_wright.ini
@@ -1,9 +1,12 @@
 TPL_JS_WRIGHT="Joomlashack Wright"
-TPL_JS_WRIGHT_XML_DESCRIPTION="<p style='clear:both'><img style='clear:both' src='../templates/js_wright/wright/images/logo.png' /></p><p style='clear:both'>This is the js_wright template by <a href='http://www.joomlashack.com'>Joomlashack</a><br />v.{version}/p>"
+TPL_JS_WRIGHT_XML_DESCRIPTION="<p style='clear:both'><img style='clear:both' src='../templates/js_wright/wright/images/logo.png' /></p><p style='clear:both'>This is the js_wright template by <a href='http://www.joomlashack.com'>Joomlashack</a><br />v.{version}</p>"
 # fields
 TPL_JS_WRIGHT_NONE="None"
+TPL_JS_WRIGHT_FIELD_DOCUMENTATION="Documentation"
+TPL_JS_WRIGHT_FIELD_DEFAULT="Template default"
 TPL_JS_WRIGHT_FIELD_NEED_HELP_LABEL="Need Help?"
 TPL_JS_WRIGHT_FIELD_NEED_HELP_DESC="Start reading the Wright documentation"
+TPL_JS_WRIGHT_FIELD_REBRAND_LICENSE="Rebranding requires a license, learn more."
 TPL_JS_WRIGHT_FIELD_REMOVE_BRANDING_LABEL="Remove Branding"
 TPL_JS_WRIGHT_FIELD_REMOVE_BRANDING_DESC="This setting removes the branding from the footer of the template."
 TPL_JS_WRIGHT_FIELD_STYLE_LABEL="Style"
@@ -18,12 +21,21 @@ TPL_JS_WRIGHT_FIELD_LOGO_IMAGE_LABEL="Logo Image"
 TPL_JS_WRIGHT_FIELD_LOGO_IMAGE_DESC="You can select your logo from the images directory after you upload the image."
 TPL_JS_WRIGHT_FIELD_LOGO_WIDTH_LABEL="Logo Width"
 TPL_JS_WRIGHT_FIELD_LOGO_WIDTH_DESC="Select the column width for the logo, the rest of the space will be given to the newsflash module, or if you set it to full width the module will disappear"
+TPL_JS_WRIGHT_FIELD_LOGO_TEMPLATE="Use template logo"
+TPL_JS_WRIGHT_FIELD_LOGO_MODULE="Use module with position of logo"
+TPL_JS_WRIGHT_FIELD_LOGO_TITLE="Use site title"
 TPL_JS_WRIGHT_FIELD_BODY_FONT_LABEL="Body Font"
 TPL_JS_WRIGHT_FIELD_BODY_FONT_DESC="Select the default font face for the body"
 TPL_JS_WRIGHT_FIELD_HEADING_FONT_LABEL="Heading Font"
 TPL_JS_WRIGHT_FIELD_HEADING_FONT_DESC="Select the default font face for the headers"
 TPL_JS_WRIGHT_FIELD_COLUMNS_LABEL="Columns"
 TPL_JS_WRIGHT_FIELD_COLUMNS_DESC="You can set the default widths and arrange the main columns. Any columns that are unused will just be hidden and the main column will be widened."
+TPL_JS_WRIGHT_FIELD_COLUMNS_USING="Using"
+TPL_JS_WRIGHT_FIELD_COLUMNS_OF="of"
+TPL_JS_WRIGHT_FIELD_COLUMNS_WARNING="The total needs to add up to 12"
+TPL_JS_WRIGHT_FIELD_COLUMN_MAIN="Main"
+TPL_JS_WRIGHT_FIELD_COLUMN_SIDEBAR1="Sidebar1"
+TPL_JS_WRIGHT_FIELD_COLUMN_SIDEBAR2="Sidebar2"
 TPL_JS_WRIGHT_FIELD_DOCTYPE_LABEL="Doctype"
 TPL_JS_WRIGHT_FIELD_DOCTYPE_DESC="Select the doctype"
 TPL_JS_WRIGHT_FIELD_DOCTYPE_HTML5="HTML5"
