--- a/code/language/es-ES/es-ES.tpl_js_wright.ini
+++ b/code/language/es-ES/es-ES.tpl_js_wright.ini
@@ -2,10 +2,13 @@ TPL_JS_WRIGHT="Joomlashack Wright"
 TPL_JS_WRIGHT_XML_DESCRIPTION="<p style='clear:both'><img style='clear:both' src='../templates/js_wright/wright/images/logo.png' /></p><p style='clear:both'>Esta es la plantilla js_wright desarrollada por <a href='http://www.joomlashack.com'>Joomlashack</a><br />v.{version}</p>"
 # campos
 TPL_JS_WRIGHT_NONE="Ninguna"
+TPL_JS_WRIGHT_FIELD_DOCUMENTATION="Documentación"
+TPL_JS_WRIGHT_FIELD_DEFAULT="Por defecto de la plantilla"
 TPL_JS_WRIGHT_FIELD_NEED_HELP_LABEL="¿Necesitas ayuda?"
 TPL_JS_WRIGHT_FIELD_NEED_HELP_DESC="Empieza leyendo la documentación de Wright"
-TPL_JS_WRIGHT_FIELD_REMOVE_BRANDING_LABEL="Eliminar enlace desarrollador"
-TPL_JS_WRIGHT_FIELD_REMOVE_BRANDING_DESC="Permite ocultar el desarrollado por del pie de página del template."
+TPL_JS_WRIGHT_FIELD_REBRAND_LICENSE="Para eliminar la marca se requiere una licencia, conozca más."
+TPL_JS_WRIGHT_FIELD_REMOVE_BRANDING_LABEL="Eliminar marca"
+TPL_JS_WRIGHT_FIELD_REMOVE_BRANDING_DESC="Permite ocultar la marca por del pie de página del template."
 TPL_JS_WRIGHT_FIELD_STYLE_LABEL="Estilo"
 TPL_JS_WRIGHT_FIELD_STYLE_DESC="Selecciona qué variaciones de estilos te gustaría utilizar."
 TPL_JS_WRIGHT_FIELD_ENABLE_MOOTOOLS_LABEL="Cargar Mootools"
@@ -18,14 +21,23 @@ TPL_JS_WRIGHT_FIELD_LOGO_IMAGE_LABEL="Imagen para el Logo"
 TPL_JS_WRIGHT_FIELD_LOGO_IMAGE_DESC="Puedes subir tu imagen para el logo al directorio de imágenes y luego seleccionarla desde aquí."
 TPL_JS_WRIGHT_FIELD_LOGO_WIDTH_LABEL="Ancho del Logo"
 TPL_JS_WRIGHT_FIELD_LOGO_WIDTH_DESC="Selecciona el número de columnas de ancho que ocupará el logo, el resto del espacio será asignado al módulo contiguo"
+TPL_JS_WRIGHT_FIELD_LOGO_TEMPLATE="Usar el logo de la plantilla"
+TPL_JS_WRIGHT_FIELD_LOGO_MODULE="Usar el módulo con la posición logo"
+TPL_JS_WRIGHT_FIELD_LOGO_TITLE="Usar el título del sitio"
 TPL_JS_WRIGHT_FIELD_BODY_FONT_LABEL="Tipografía para el Body"
 TPL_JS_WRIGHT_FIELD_BODY_FONT_DESC="Selecciona la tipografía por defecto para el body"
 TPL_JS_WRIGHT_FIELD_HEADING_FONT_LABEL="Tipografía para los encabezados (h1, h2, ..)"
 TPL_JS_WRIGHT_FIELD_HEADING_FONT_DESC="Selecciona la tipografía por defecto para los encabezados"
 TPL_JS_WRIGHT_FIELD_COLUMNS_LABEL="Columnas"
 TPL_JS_WRIGHT_FIELD_COLUMNS_DESC="Puedes modificar el ancho y la posición de cada columna principal. Si no asignas módulos a las columnas su espacio será asignado automáticamente a la columna principal."
+TPL_JS_WRIGHT_FIELD_COLUMNS_USING="Usando"
+TPL_JS_WRIGHT_FIELD_COLUMNS_OF="de"
+TPL_JS_WRIGHT_FIELD_COLUMNS_WARNING="El total debe sumar 12 exactamente"
+TPL_JS_WRIGHT_FIELD_COLUMN_MAIN="Main (principal)"
+TPL_JS_WRIGHT_FIELD_COLUMN_SIDEBAR1="Sidebar1 (Lateral 1)"
+TPL_JS_WRIGHT_FIELD_COLUMN_SIDEBAR2="Sidebar2 (Lateral 2)"
 TPL_JS_WRIGHT_FIELD_DOCTYPE_LABEL="Doctype"
-TPL_JS_WRIGHT_FIELD_DOCTYPE_DESC=""
+TPL_JS_WRIGHT_FIELD_DOCTYPE_DESC="Seleccione el doctype"
 TPL_JS_WRIGHT_FIELD_DOCTYPE_HTML5="HTML5"
 TPL_JS_WRIGHT_FIELD_DOCTYPE_XHTML1_TRANSITIONAL="XHTML 1 Transitional"
 TPL_JS_WRIGHT_FIELD_DOCTYPE_XHTML1_STRICT="XHTML 1 Strict"
