Added option for placing Javascript calls at the bottom Fixed Bootstrap carousel conflict with Mootools

--- a/code/language/en-GB/en-GB.tpl_js_wright.ini
+++ b/code/language/en-GB/en-GB.tpl_js_wright.ini
@@ -41,6 +41,8 @@ TPL_JS_WRIGHT_FIELD_DOCTYPE_DESC="Select the doctype"
 TPL_JS_WRIGHT_FIELD_DOCTYPE_HTML5="HTML5"
 TPL_JS_WRIGHT_FIELD_DOCTYPE_XHTML1_TRANSITIONAL="XHTML 1 Transitional"
 TPL_JS_WRIGHT_FIELD_DOCTYPE_XHTML1_STRICT="XHTML 1 Strict"
+TPL_JS_WRIGHT_FIELD_JAVASCRIPT_BOTTOM="Load Wright's Javascript calls at the bottom"
+TPL_JS_WRIGHT_FIELD_JAVASCRIPT_BOTTOM_DESC="As a recommended practice for speeding sites, Wright's calls will be placed near to the closure of the body tag.  If you are developing your custom template, the footer tag is required for this to work."
 # config title
 TPL_JS_WRIGHT_BOOTSTRAP_TITLE_LABEL="Bootstrap settings"
 TPL_JS_WRIGHT_BOOTSTRAP_TITLE_DESC="Settings to customize Bootstrap"
