--- a/code/language/es-ES/es-ES.tpl_js_wright.ini
+++ b/code/language/es-ES/es-ES.tpl_js_wright.ini
@@ -41,6 +41,8 @@ TPL_JS_WRIGHT_FIELD_DOCTYPE_DESC="Seleccione el doctype"
 TPL_JS_WRIGHT_FIELD_DOCTYPE_HTML5="HTML5"
 TPL_JS_WRIGHT_FIELD_DOCTYPE_XHTML1_TRANSITIONAL="XHTML 1 Transitional"
 TPL_JS_WRIGHT_FIELD_DOCTYPE_XHTML1_STRICT="XHTML 1 Strict"
+TPL_JS_WRIGHT_FIELD_JAVASCRIPT_BOTTOM="Cargar los Javascript de Wright al final de la página"
+TPL_JS_WRIGHT_FIELD_JAVASCRIPT_BOTTOM_DESC="Como una práctica recomendada para mejorar la velocidad de las páginas, los Javascript de Wright serán cargados cerca del cierre del tag body.  Si está desrrollando una plantilla propia, el tag footer es requerido para que ésto funcione correctamente."
 # config title
 TPL_JS_WRIGHT_BOOTSTRAP_TITLE_LABEL="Ajustes de Bootstrap"
 TPL_JS_WRIGHT_BOOTSTRAP_TITLE_DESC="Ajustes para personalizar Bootstrap"
