--- a/code/language/es-ES/es-ES.tpl_js_wright.ini
+++ b/code/language/es-ES/es-ES.tpl_js_wright.ini
@@ -54,7 +54,7 @@ TPL_JS_WRIGHT_FIELD_BOOTSTRAP_ROW_MODE_DEFAULT="Por defecto (px)"
 TPL_JS_WRIGHT_FIELD_ENABLE_RESPONSIVE="Hailitar el comportamiento responsive de Bootstrap"
 TPL_JS_WRIGHT_FIELD_ENABLE_RESPONSIVE_DESC="Puede seleccionar si desea habilitar o deshabilitar el comportamiento responsive (para vistas móviles y de tablets)"
 TPL_JS_WRIGHT_FIELD_STICKY_FOOTER="Pie de página fijo"
-TPL_JS_WRIGHT_FIELD_STICKY_FOOTER_DESC="Seleccione si quiere que el pie de página siempre esté al final de la página"
+TPL_JS_WRIGHT_FIELD_STICKY_FOOTER_DESC="Seleccione si quiere que el pie de página siempre esté al final de la pantalla"
 TPL_JS_WRIGHT_BOOTSTRAP_IMAGES="Estilos Bootstrap para imágenes de artículos"
 TPL_JS_WRIGHT_BOOTSTRAP_IMAGES_DESC="Seleccione si desea que las imágenes de artículos (intro y texto completo) tengan aplicado un estilo Bootstrap y ancho/alto responsive"
 TPL_JS_WRIGHT_BOOTSTRAP_IMAGES_ROUNDED="Redondeado"
