--- a/code/language/de-DE/de-DE.tpl_js_wright.ini
+++ b/code/language/de-DE/de-DE.tpl_js_wright.ini
@@ -1,5 +1,5 @@
 TPL_JS_WRIGHT="Joomlashack Wright"
-TPL_JS_WRIGHT_XML_DESCRIPTION="<p style='clear:both'><img style='clear:both' src='../templates/js_wright/wright/images/logo.png' /></p><p style='clear:both'>Dies ist das js_wright Template von <a href='http://www.joomlashack.com'>Joomlashack</a><br />v.3.1.2</p>"
+TPL_JS_WRIGHT_XML_DESCRIPTION="<p style='clear:both'><img style='clear:both' src='../templates/js_wright/wright/images/logo.png' /></p><p style='clear:both'>Dies ist das js_wright Template von <a href='http://www.joomlashack.com'>Joomlashack</a><br />v.{version}</p>"
 # Felder
 TPL_JS_WRIGHT_NONE="Keine"
 TPL_JS_WRIGHT_FIELD_DOCUMENTATION="Dokumentation"
