Removed mootools option - fixes #181 Added option for modal class - fixes #188

--- a/code/language/de-DE/de-DE.tpl_js_wright.ini
+++ b/code/language/de-DE/de-DE.tpl_js_wright.ini
@@ -11,8 +11,8 @@ TPL_JS_WRIGHT_FIELD_REMOVE_BRANDING_LABEL="Branding entfernen"
 TPL_JS_WRIGHT_FIELD_REMOVE_BRANDING_DESC="Diese Einstellungen entfernt das Branding aus der Fusszeile des Templates."
 TPL_JS_WRIGHT_FIELD_STYLE_LABEL="Gestaltung"
 TPL_JS_WRIGHT_FIELD_STYLE_DESC="Wähle aus, welche der Gestaltungsvariationen du benutzen möchtest."
-TPL_JS_WRIGHT_FIELD_ENABLE_MOOTOOLS_LABEL="Lade Mootools"
-TPL_JS_WRIGHT_FIELD_ENABLE_MOOTOOLS_DESC="Lade oder schalte die Joomla core Mootools.js aus"
+TPL_JS_WRIGHT_FIELD_ENABLE_MODAL_LABEL="Legen modale Verhalten"
+TPL_JS_WRIGHT_FIELD_ENABLE_MODAL_DESC="Verwenden Sie den modalen Klasse in einen beliebigen Link-Tag zu öffnen Pop-ups statt neuer Fenster"
 TPL_JS_WRIGHT_FIELD_LOAD_JQUERY_LABEL="Lade jQuery (gilt nur für Joomla 2.5)"
 TPL_JS_WRIGHT_FIELD_LOAD_JQUERY_DESC="Kontrolliere die Art, wie jQuery geladen wird"
 TPL_JS_WRIGHT_FIELD_LOAD_JQUERY_YES_LOCALLY="Lade jQuery lokal"
