--- a/code/language/en-GB/en-GB.tpl_js_wright.ini
+++ b/code/language/en-GB/en-GB.tpl_js_wright.ini
@@ -11,8 +11,8 @@ TPL_JS_WRIGHT_FIELD_REMOVE_BRANDING_LABEL="Remove Branding"
 TPL_JS_WRIGHT_FIELD_REMOVE_BRANDING_DESC="This setting removes the branding from the footer of the template."
 TPL_JS_WRIGHT_FIELD_STYLE_LABEL="Style"
 TPL_JS_WRIGHT_FIELD_STYLE_DESC="Select which of the style variations you wish to use."
-TPL_JS_WRIGHT_FIELD_ENABLE_MOOTOOLS_LABEL="Load Mootools"
-TPL_JS_WRIGHT_FIELD_ENABLE_MOOTOOLS_DESC="Load or turn off Joomla core Mootools.js"
+TPL_JS_WRIGHT_FIELD_ENABLE_MODAL_LABEL="Load modal behavior"
+TPL_JS_WRIGHT_FIELD_ENABLE_MODAL_DESC="Use the modal class in any link tag to open up pop ups instead of new windows"
 TPL_JS_WRIGHT_FIELD_LOAD_JQUERY_LABEL="Load jQuery (applies to Joomla 2.5 only)"
 TPL_JS_WRIGHT_FIELD_LOAD_JQUERY_DESC="Control the way that jQuery gets loaded"
 TPL_JS_WRIGHT_FIELD_LOAD_JQUERY_YES_LOCALLY="Load jQuery locally"
