--- a/code/language/es-ES/es-ES.tpl_js_wright.ini
+++ b/code/language/es-ES/es-ES.tpl_js_wright.ini
@@ -11,8 +11,8 @@ TPL_JS_WRIGHT_FIELD_REMOVE_BRANDING_LABEL="Eliminar marca"
 TPL_JS_WRIGHT_FIELD_REMOVE_BRANDING_DESC="Permite ocultar la marca por del pie de página del template."
 TPL_JS_WRIGHT_FIELD_STYLE_LABEL="Estilo"
 TPL_JS_WRIGHT_FIELD_STYLE_DESC="Selecciona qué variaciones de estilos te gustaría utilizar."
-TPL_JS_WRIGHT_FIELD_ENABLE_MOOTOOLS_LABEL="Cargar Mootools"
-TPL_JS_WRIGHT_FIELD_ENABLE_MOOTOOLS_DESC="Cargar o evitar que Joomla cargue Mootools.js"
+TPL_JS_WRIGHT_FIELD_ENABLE_MODAL_LABEL="Cargar la función modal"
+TPL_JS_WRIGHT_FIELD_ENABLE_MODAL_DESC="Permitir usar la clase modal en cualquier link para abrir un pop up en vez de una ventana nueva"
 TPL_JS_WRIGHT_FIELD_LOAD_JQUERY_LABEL="Cargar jQuery (sólo aplica para Joomla 2.5)"
 TPL_JS_WRIGHT_FIELD_LOAD_JQUERY_DESC="Decida la forma en la que jQuery será cargado"
 TPL_JS_WRIGHT_FIELD_LOAD_JQUERY_YES_LOCALLY="Cargar jQuery localmente"
