Fixed docs.css and added prettify optional mode Fixes #196 and #195

--- a/code/language/en-GB/en-GB.tpl_js_wright.ini
+++ b/code/language/en-GB/en-GB.tpl_js_wright.ini
@@ -60,3 +60,5 @@ TPL_JS_WRIGHT_BOOTSTRAP_IMAGES_DESC="Select if you want to enable your article (
 TPL_JS_WRIGHT_BOOTSTRAP_IMAGES_ROUNDED="Rounded"
 TPL_JS_WRIGHT_BOOTSTRAP_IMAGES_CIRCLE="Circle"
 TPL_JS_WRIGHT_BOOTSTRAP_IMAGES_POLAROID="Polaroid"
+TPL_JS_WRIGHT_DOCUMENTATION_MODE=Enable template documentation mode
+TPL_JS_WRIGHT_DOCUMENTATION_MODE=Loads docs.css and prettify.js to enhance documentation either for the template or your own project
