--- a/code/language/es-ES/es-ES.tpl_js_wright.ini
+++ b/code/language/es-ES/es-ES.tpl_js_wright.ini
@@ -60,3 +60,5 @@ TPL_JS_WRIGHT_BOOTSTRAP_IMAGES_DESC="Seleccione si desea que las imágenes de ar
 TPL_JS_WRIGHT_BOOTSTRAP_IMAGES_ROUNDED="Redondeado"
 TPL_JS_WRIGHT_BOOTSTRAP_IMAGES_CIRCLE="Círculo"
 TPL_JS_WRIGHT_BOOTSTRAP_IMAGES_POLAROID="Polaroid"
+TPL_JS_WRIGHT_DOCUMENTATION_MODE=Habilitar modo documentación
+TPL_JS_WRIGHT_DOCUMENTATION_MODE=Carga los archivos docs.css y prettify.js para documentación de la plantilla o su propio proyecto
