--- a/code/language/de-DE/de-DE.tpl_js_wright.ini
+++ b/code/language/de-DE/de-DE.tpl_js_wright.ini
@@ -60,5 +60,5 @@ TPL_JS_WRIGHT_BOOTSTRAP_IMAGES_DESC="Wähle, ob auf deine Bilder in Artikeln (Ei
 TPL_JS_WRIGHT_BOOTSTRAP_IMAGES_ROUNDED="Abgerundet"
 TPL_JS_WRIGHT_BOOTSTRAP_IMAGES_CIRCLE="Kreis"
 TPL_JS_WRIGHT_BOOTSTRAP_IMAGES_POLAROID="Polaroid"
-TPL_JS_WRIGHT_DOCUMENTATION_MODE=Aktivieren Vorlage Dokumentation Modus
-TPL_JS_WRIGHT_DOCUMENTATION_MODE_DESC=Lasten docs.css und prettify.js die Dokumentation entweder zu verstärken für die Vorlage oder Ihr eigenes Projekt
+TPL_JS_WRIGHT_DOCUMENTATION_MODE="Aktivieren Vorlage Dokumentation Modus"
+TPL_JS_WRIGHT_DOCUMENTATION_MODE_DESC="Lasten docs.css und prettify.js die Dokumentation entweder zu verstärken für die Vorlage oder Ihr eigenes Projekt"
