Included jQuery 1.10 - fixes #200 Added support for jQuery migration plugin (in configuration) Standardized configuration parameter names

--- a/code/language/de-DE/de-DE.tpl_js_wright.ini
+++ b/code/language/de-DE/de-DE.tpl_js_wright.ini
@@ -13,8 +13,11 @@ TPL_JS_WRIGHT_FIELD_STYLE_LABEL="Gestaltung"
 TPL_JS_WRIGHT_FIELD_STYLE_DESC="Wähle aus, welche der Gestaltungsvariationen du benutzen möchtest."
 TPL_JS_WRIGHT_FIELD_ENABLE_MODAL_LABEL="Legen modale Verhalten"
 TPL_JS_WRIGHT_FIELD_ENABLE_MODAL_DESC="Verwenden Sie den modalen Klasse in einen beliebigen Link-Tag zu öffnen Pop-ups statt neuer Fenster"
+COM_TEMPLATES_DYNAMIC_FIELDSET_LABEL="Javascript und Bootstrap Optionen"
 TPL_JS_WRIGHT_FIELD_LOAD_JQUERY_LABEL="Lade jQuery (gilt nur für Joomla 2.5)"
 TPL_JS_WRIGHT_FIELD_LOAD_JQUERY_DESC="Kontrolliere die Art, wie jQuery geladen wird"
+TPL_JS_WRIGHT_FIELD_LOAD_JQUERYMIGRATION_LABEL="Include jQuery Migration plugin"
+TPL_JS_WRIGHT_FIELD_LOAD_JQUERYMIGRATION_DESC="Fügen Sie die jQuery-Plugin für Migration Kompatibilität mit Plugins nicht unterstützt jQuery 1.9 +"
 TPL_JS_WRIGHT_FIELD_LOAD_JQUERY_YES_LOCALLY="Lade jQuery lokal"
 TPL_JS_WRIGHT_FIELD_LOAD_JQUERY_YES_GOOGLE="Lade jQuery von Google"
 TPL_JS_WRIGHT_FIELD_LOGO_IMAGE_LABEL="Logo Bild"
