--- a/code/language/en-GB/en-GB.tpl_js_wright.ini
+++ b/code/language/en-GB/en-GB.tpl_js_wright.ini
@@ -13,8 +13,11 @@ TPL_JS_WRIGHT_FIELD_STYLE_LABEL="Style"
 TPL_JS_WRIGHT_FIELD_STYLE_DESC="Select which of the style variations you wish to use."
 TPL_JS_WRIGHT_FIELD_ENABLE_MODAL_LABEL="Load modal behavior"
 TPL_JS_WRIGHT_FIELD_ENABLE_MODAL_DESC="Use the modal class in any link tag to open up pop ups instead of new windows"
+COM_TEMPLATES_DYNAMIC_FIELDSET_LABEL="Javascript and Bootstrap options"
 TPL_JS_WRIGHT_FIELD_LOAD_JQUERY_LABEL="Load jQuery (applies to Joomla 2.5 only)"
 TPL_JS_WRIGHT_FIELD_LOAD_JQUERY_DESC="Control the way that jQuery gets loaded"
+TPL_JS_WRIGHT_FIELD_LOAD_JQUERYMIGRATION_LABEL="Include jQuery Migration plugin"
+TPL_JS_WRIGHT_FIELD_LOAD_JQUERYMIGRATION_DESC="Include the jQuery Migration plugin for compatibility with plugins not supporting jQuery 1.9+"
 TPL_JS_WRIGHT_FIELD_LOAD_JQUERY_YES_LOCALLY="Load jQuery locally"
 TPL_JS_WRIGHT_FIELD_LOAD_JQUERY_YES_GOOGLE="Load jQuery from Google"
 TPL_JS_WRIGHT_FIELD_LOGO_IMAGE_LABEL="Logo Image"
