--- a/code/language/es-ES/es-ES.tpl_js_wright.ini
+++ b/code/language/es-ES/es-ES.tpl_js_wright.ini
@@ -13,8 +13,11 @@ TPL_JS_WRIGHT_FIELD_STYLE_LABEL="Estilo"
 TPL_JS_WRIGHT_FIELD_STYLE_DESC="Selecciona qué variaciones de estilos te gustaría utilizar."
 TPL_JS_WRIGHT_FIELD_ENABLE_MODAL_LABEL="Cargar la función modal"
 TPL_JS_WRIGHT_FIELD_ENABLE_MODAL_DESC="Permitir usar la clase modal en cualquier link para abrir un pop up en vez de una ventana nueva"
+COM_TEMPLATES_DYNAMIC_FIELDSET_LABEL="Opciones Javascript y Bootstrap"
 TPL_JS_WRIGHT_FIELD_LOAD_JQUERY_LABEL="Cargar jQuery (sólo aplica para Joomla 2.5)"
 TPL_JS_WRIGHT_FIELD_LOAD_JQUERY_DESC="Decida la forma en la que jQuery será cargado"
+TPL_JS_WRIGHT_FIELD_LOAD_JQUERYMIGRATION_LABEL="Incluir el plugin de migración jQuery"
+TPL_JS_WRIGHT_FIELD_LOAD_JQUERYMIGRATION_DESC="Include el jQuery Migration Plugin para compatibilidad con plugins que no soportan jQuery 1.9+"
 TPL_JS_WRIGHT_FIELD_LOAD_JQUERY_YES_LOCALLY="Cargar jQuery localmente"
 TPL_JS_WRIGHT_FIELD_LOAD_JQUERY_YES_GOOGLE="Cargar jQuery desde Google"
 TPL_JS_WRIGHT_FIELD_LOGO_IMAGE_LABEL="Imagen para el Logo"
