--- a/code/language/en-GB/en-GB.tpl_js_wright.ini
+++ b/code/language/en-GB/en-GB.tpl_js_wright.ini
@@ -1,5 +1,5 @@
 TPL_JS_WRIGHT="Joomlashack Wright"
-TPL_JS_WRIGHT_XML_DESCRIPTION="<p style='clear:both'><img style='clear:both' src='../templates/js_wright/wright/images/logo.png' /></p><p style='clear:both'>This is the js_wright template by <a href='http://www.joomlashack.com'>Joomlashack</a><br />v.{version}</p>"
+TPL_JS_WRIGHT_XML_DESCRIPTION="<p style='clear:both'><img style='clear:both' src='../templates/js_wright/wright/images/logo.png' /></p><p style='clear:both'>This is the js_wright template by <a target="_blank" href='http://www.joomlashack.com'>Joomlashack</a><br />v.{version}</p>"
 # fields
 TPL_JS_WRIGHT_POWERED="This is a template powered by the <a target="_blank" href='http://wright.joomlashack.com'>Wright Framework</a>"
 TPL_JS_WRIGHT_NONE="None"
