Fixes in language files

--- a/code/language/en-GB/en-GB.tpl_js_wright.ini
+++ b/code/language/en-GB/en-GB.tpl_js_wright.ini
@@ -1,6 +1,7 @@
 TPL_JS_WRIGHT="Joomlashack Wright"
 TPL_JS_WRIGHT_XML_DESCRIPTION="<p style='clear:both'><img style='clear:both' src='../templates/js_wright/wright/images/logo.png' /></p><p style='clear:both'>This is the js_wright template by <a target='_blank' href='http://www.joomlashack.com'>Joomlashack</a><br />v.{version}</p>"
-# fields
+
+; Fields
 TPL_JS_WRIGHT_POWERED="This is a template powered by the <a target='_blank' href='http://wright.joomlashack.com'>Wright Framework</a>"
 TPL_JS_WRIGHT_NONE="None"
 TPL_JS_WRIGHT_FIELD_DOCUMENTATION="Documentation"
@@ -44,10 +45,14 @@ TPL_JS_WRIGHT_FIELD_DOCTYPE_XHTML1_TRANSITIONAL="XHTML 1 Transitional"
 TPL_JS_WRIGHT_FIELD_DOCTYPE_XHTML1_STRICT="XHTML 1 Strict"
 TPL_JS_WRIGHT_FIELD_JAVASCRIPT_BOTTOM="Load Wright's Javascript calls at the bottom"
 TPL_JS_WRIGHT_FIELD_JAVASCRIPT_BOTTOM_DESC="As a recommended practice for speeding sites, Wright's calls will be placed near to the closure of the body tag.  If you are developing your custom template, the footer tag is required for this to work."
-# config title
+TPL_JS_WRIGHT_DOCUMENTATION_MODE="Enable template documentation mode"
+TPL_JS_WRIGHT_DOCUMENTATION_MODE_DESC="Loads docs.css and prettify.js to enhance documentation either for the template or your own project"
+
+; Config title
 TPL_JS_WRIGHT_BOOTSTRAP_TITLE_LABEL="Bootstrap settings"
 TPL_JS_WRIGHT_BOOTSTRAP_TITLE_DESC="Settings to customize Bootstrap"
-# fields
+
+; Bootstrap Fields
 TPL_JS_WRIGHT_FIELD_BOOTSTRAP_ROW_MODE_LABEL="Bootstrap grid mode"
 TPL_JS_WRIGHT_FIELD_BOOTSTRAP_ROW_MODE_DESC="The template can work either in a 960px grid (px) or using a fluid grid (%)"
 TPL_JS_WRIGHT_FIELD_BOOTSTRAP_ROW_MODE_FLUID="Fluid (%)"
@@ -61,5 +66,3 @@ TPL_JS_WRIGHT_BOOTSTRAP_IMAGES_DESC="Select if you want to enable your article (
 TPL_JS_WRIGHT_BOOTSTRAP_IMAGES_ROUNDED="Rounded"
 TPL_JS_WRIGHT_BOOTSTRAP_IMAGES_CIRCLE="Circle"
 TPL_JS_WRIGHT_BOOTSTRAP_IMAGES_POLAROID="Polaroid"
-TPL_JS_WRIGHT_DOCUMENTATION_MODE="Enable template documentation mode"
-TPL_JS_WRIGHT_DOCUMENTATION_MODE_DESC="Loads docs.css and prettify.js to enhance documentation either for the template or your own project"
