--- a/code/language/en-GB/en-GB.tpl_js_wright.ini
+++ b/code/language/en-GB/en-GB.tpl_js_wright.ini
@@ -63,3 +63,9 @@ TPL_JS_WRIGHT_BOOTSTRAP_IMAGES_CIRCLE="Circle"
 TPL_JS_WRIGHT_BOOTSTRAP_IMAGES_POLAROID="Polaroid"
 TPL_JS_WRIGHT_DOCUMENTATION_MODE="Enable template documentation mode"
 TPL_JS_WRIGHT_DOCUMENTATION_MODE_DESC="Loads docs.css and prettify.js to enhance documentation either for the template or your own project"
+TPL_JS_WRIGHT_BROWSER_COMPATIBILITY_TITLE="Browser compatibility warning settings"
+TPL_JS_WRIGHT_BROWSER_COMPATIBILITY_TITLE_DESC="Settings for setting up an optiona warning when the browser deoesn't meet the requirements of this site"
+TPL_JS_WRIGHT_BROWSER_COMPATIBILITY_SWITCH="Enable browser compatibility warning"
+TPL_JS_WRIGHT_BROWSER_COMPATIBILITY_SWITCH_DESC="When the browser doesn't meet the settings set up below, a warning will be displayed, optionally recommending certain browsers"
+TPL_JS_WRIGHT_BROWSER_COMPATIBILITY="Browser compatibility table"
+TPL_JS_WRIGHT_BROWSER_COMPATIBILITY_DESC="Supported and recommended browsers settings"
