Added browser compatibility switch and dynamic table to present warning to old browsers

--- a/code/language/de-DE/de-DE.tpl_js_wright.ini
+++ b/code/language/de-DE/de-DE.tpl_js_wright.ini
@@ -44,7 +44,7 @@ TPL_JS_WRIGHT_FIELD_DOCTYPE_HTML5="HTML5"
 TPL_JS_WRIGHT_FIELD_DOCTYPE_XHTML1_TRANSITIONAL="XHTML 1 Transitional"
 TPL_JS_WRIGHT_FIELD_DOCTYPE_XHTML1_STRICT="XHTML 1 Strict"
 TPL_JS_WRIGHT_FIELD_JAVASCRIPT_BOTTOM="Lade Wright's Javascript Aufrufe zuletzt"
-TPL_JS_WRIGHT_FIELD_JAVASCRIPT_BOTTOM_DESC="Als empfohlene Praxis für die Beschleunigung von Seiten, werden Wright's Aufrufe nahe dem schliessenden body-Tag platziert. Wenn du dein angepasstes Template entwickelst, wird der footer-Tag benötigt, damit dies funktioniert."
+TPL_JS_WRIGHT_FIELD_JAVASCRIPT_BOTTOM_DESC="Als empfohlene Praxis für die Beschleunigung von Seiten, werden Wright's Aufrufe nahe dem schliessenden body-Tag platziert."
 TPL_JS_WRIGHT_DOCUMENTATION_MODE="Aktivieren Vorlage Dokumentation Modus"
 TPL_JS_WRIGHT_DOCUMENTATION_MODE_DESC="Lasten docs.css und prettify.js die Dokumentation entweder zu verstärken für die Vorlage oder Ihr eigenes Projekt"
 
