--- a/code/language/en-GB/en-GB.tpl_js_wright.ini
+++ b/code/language/en-GB/en-GB.tpl_js_wright.ini
@@ -44,7 +44,7 @@ TPL_JS_WRIGHT_FIELD_DOCTYPE_HTML5="HTML5"
 TPL_JS_WRIGHT_FIELD_DOCTYPE_XHTML1_TRANSITIONAL="XHTML 1 Transitional"
 TPL_JS_WRIGHT_FIELD_DOCTYPE_XHTML1_STRICT="XHTML 1 Strict"
 TPL_JS_WRIGHT_FIELD_JAVASCRIPT_BOTTOM="Load Wright's Javascript calls at the bottom"
-TPL_JS_WRIGHT_FIELD_JAVASCRIPT_BOTTOM_DESC="As a recommended practice for speeding sites, Wright's calls will be placed near to the closure of the body tag.  If you are developing your custom template, the footer tag is required for this to work."
+TPL_JS_WRIGHT_FIELD_JAVASCRIPT_BOTTOM_DESC="As a recommended practice for speeding sites, Wright's calls will be placed near to the closure of the body tag."
 TPL_JS_WRIGHT_DOCUMENTATION_MODE="Enable template documentation mode"
 TPL_JS_WRIGHT_DOCUMENTATION_MODE_DESC="Loads docs.css and prettify.js to enhance documentation either for the template or your own project"
 
@@ -69,8 +69,20 @@ TPL_JS_WRIGHT_BOOTSTRAP_IMAGES_POLAROID="Polaroid"
 
 ; Browser Compatibility
 TPL_JS_WRIGHT_BROWSER_COMPATIBILITY_TITLE="Browser compatibility warning settings"
-TPL_JS_WRIGHT_BROWSER_COMPATIBILITY_TITLE_DESC="Settings for setting up an optiona warning when the browser deoesn't meet the requirements of this site"
+TPL_JS_WRIGHT_BROWSER_COMPATIBILITY_TITLE_DESC="Settings for setting up an optional warning when the browser deoesn't meet the requirements of this site"
 TPL_JS_WRIGHT_BROWSER_COMPATIBILITY_SWITCH="Enable browser compatibility warning"
 TPL_JS_WRIGHT_BROWSER_COMPATIBILITY_SWITCH_DESC="When the browser doesn't meet the settings set up below, a warning will be displayed, optionally recommending certain browsers"
 TPL_JS_WRIGHT_BROWSER_COMPATIBILITY="Browser compatibility table"
 TPL_JS_WRIGHT_BROWSER_COMPATIBILITY_DESC="Supported and recommended browsers settings"
+TPL_JS_WRIGHT_BROWSER_COMPATIBILITY_BROWSER="Browser"
+TPL_JS_WRIGHT_BROWSER_COMPATIBILITY_MINIMUM_VERSION="Minimum Version"
+TPL_JS_WRIGHT_BROWSER_COMPATIBILITY_DESKTOP="Desktop compatible"
+TPL_JS_WRIGHT_BROWSER_COMPATIBILITY_MOBILE="Mobile compatible"
+TPL_JS_WRIGHT_BROWSER_COMPATIBILITY_RECOMMENDED="Recommended for Desktop"
+
+TPL_JS_WRIGHT_BROWSER_WARNING_TITLE="Improve your Experience"
+TPL_JS_WRIGHT_BROWSER_WARNING_CONTENT="Attention: we notice that you are using an older browser.  We no longer support this version of your browser.  Please install one of the supported browsers listed below"
+TPL_JS_WRIGHT_BROWSER_WARNING_CONCLUSION="Continuing may result in unexpected behavior"
+TPL_JS_WRIGHT_BROWSER_WARNING_BUTTON="I understand"
+TPL_JS_WRIGHT_BROWSER_WARNING_VERSION="v.%s and up"
+TPL_JS_WRIGHT_BROWSER_WARNING_RECOMMENDED="recommended"
