adding strings of less compile option in es_ES language

--- a/code/language/es-ES/es-ES.tpl_js_wright.ini
+++ b/code/language/es-ES/es-ES.tpl_js_wright.ini
@@ -66,6 +66,8 @@ TPL_JS_WRIGHT_BOOTSTRAP_IMAGES_DESC="Seleccione si desea que las imágenes de ar
 TPL_JS_WRIGHT_BOOTSTRAP_IMAGES_ROUNDED="Redondeado"
 TPL_JS_WRIGHT_BOOTSTRAP_IMAGES_CIRCLE="Círculo"
 TPL_JS_WRIGHT_BOOTSTRAP_IMAGES_POLAROID="Polaroid"
+TPL_JS_WRIGHT_LESS_COMPILE="Compilar archivos LESS"
+TPL_JS_WRIGHT_LESS_COMPILE_DESC="Cuando se selecciona, en cada refresh de la página se comprueba que se han modificado los archivos LESS y compila en archivos CSS"
 
 ; Browser Compatibility
 TPL_JS_WRIGHT_BROWSER_COMPATIBILITY_TITLE="Configuraciones de advertencia de compatibilidad de navegadores"
