--- a/code/language/en-GB/en-GB.tpl_js_wright.ini
+++ b/code/language/en-GB/en-GB.tpl_js_wright.ini
@@ -66,7 +66,7 @@ TPL_JS_WRIGHT_BOOTSTRAP_IMAGES_DESC="Select if you want to enable your article (
 TPL_JS_WRIGHT_BOOTSTRAP_IMAGES_ROUNDED="Rounded"
 TPL_JS_WRIGHT_BOOTSTRAP_IMAGES_CIRCLE="Circle"
 TPL_JS_WRIGHT_BOOTSTRAP_IMAGES_POLAROID="Polaroid"
-TPL_JS_WRIGHT_LESS_COMPILE="Compile less files"
+TPL_JS_WRIGHT_LESS_COMPILE="Compile less files (Experimental)"
 TPL_JS_WRIGHT_LESS_COMPILE_DESC="When selected, on each page refresh less files will be checked for timestamps to see if they have changed and therefore compile them into CSS files"
 
 ; Browser Compatibility
