Short labels for params
Issue #320

--- a/code/language/en-GB/en-GB.tpl_js_wright.ini
+++ b/code/language/en-GB/en-GB.tpl_js_wright.ini
@@ -15,8 +15,8 @@ TPL_JS_WRIGHT_FIELD_STYLE_LABEL="Style"
 TPL_JS_WRIGHT_FIELD_STYLE_DESC="Select which of the style variations you wish to use."
 TPL_JS_WRIGHT_FIELD_ENABLE_MODAL_LABEL="Load modal behavior"
 TPL_JS_WRIGHT_FIELD_ENABLE_MODAL_DESC="Use the modal class in any link tag to open up pop ups instead of new windows"
-TPL_JS_WRIGHT_FIELD_LOAD_JQUERY_LABEL="Load jQuery (applies to Joomla 2.5 only)"
-TPL_JS_WRIGHT_FIELD_LOAD_JQUERY_DESC="Control the way that jQuery gets loaded"
+TPL_JS_WRIGHT_FIELD_LOAD_JQUERY_LABEL="Load jQuery *"
+TPL_JS_WRIGHT_FIELD_LOAD_JQUERY_DESC="Control the way that jQuery gets loaded (applies to Joomla 2.5 only)"
 TPL_JS_WRIGHT_FIELD_LOAD_JQUERY_YES_LOCALLY="Load jQuery locally"
 TPL_JS_WRIGHT_FIELD_LOAD_JQUERY_YES_GOOGLE="Load jQuery from Google"
 TPL_JS_WRIGHT_FIELD_LOGO_IMAGE_LABEL="Logo Image"
@@ -43,9 +43,9 @@ TPL_JS_WRIGHT_FIELD_DOCTYPE_DESC="Select the doctype"
 TPL_JS_WRIGHT_FIELD_DOCTYPE_HTML5="HTML5"
 TPL_JS_WRIGHT_FIELD_DOCTYPE_XHTML1_TRANSITIONAL="XHTML 1 Transitional"
 TPL_JS_WRIGHT_FIELD_DOCTYPE_XHTML1_STRICT="XHTML 1 Strict"
-TPL_JS_WRIGHT_FIELD_JAVASCRIPT_BOTTOM="Load Wright's Javascript calls at the bottom"
+TPL_JS_WRIGHT_FIELD_JAVASCRIPT_BOTTOM="Load Javascript at bottom"
 TPL_JS_WRIGHT_FIELD_JAVASCRIPT_BOTTOM_DESC="As a recommended practice for speeding sites, Wright's calls will be placed near to the closure of the body tag."
-TPL_JS_WRIGHT_DOCUMENTATION_MODE="Enable template documentation mode"
+TPL_JS_WRIGHT_DOCUMENTATION_MODE="Load template docs"
 TPL_JS_WRIGHT_DOCUMENTATION_MODE_DESC="Loads docs.css and prettify.js to enhance documentation either for the template or your own project"
 
 ; Config title
@@ -57,22 +57,22 @@ TPL_JS_WRIGHT_FIELD_BOOTSTRAP_ROW_MODE_LABEL="Bootstrap grid mode"
 TPL_JS_WRIGHT_FIELD_BOOTSTRAP_ROW_MODE_DESC="The template can work either in a 960px grid (px) or using a fluid grid (%)"
 TPL_JS_WRIGHT_FIELD_BOOTSTRAP_ROW_MODE_FLUID="Fluid (%)"
 TPL_JS_WRIGHT_FIELD_BOOTSTRAP_ROW_MODE_DEFAULT="Default (px)"
-TPL_JS_WRIGHT_FIELD_ENABLE_RESPONSIVE="Enable Bootstrap's responsive behavior"
+TPL_JS_WRIGHT_FIELD_ENABLE_RESPONSIVE="Responsive support"
 TPL_JS_WRIGHT_FIELD_ENABLE_RESPONSIVE_DESC="You can select whether you want to have responsive behavior (mobile/tablet view)"
 TPL_JS_WRIGHT_FIELD_STICKY_FOOTER="Sticky footer"
 TPL_JS_WRIGHT_FIELD_STICKY_FOOTER_DESC="Select whether you want to force the footer to be always at the bottom of the screen"
-TPL_JS_WRIGHT_BOOTSTRAP_IMAGES="Bootstrap styles for article images"
+TPL_JS_WRIGHT_BOOTSTRAP_IMAGES="Bootstrap for article images"
 TPL_JS_WRIGHT_BOOTSTRAP_IMAGES_DESC="Select if you want to enable your article (intro and full text) images any of the styles available, and grow them to be responsive width/height"
 TPL_JS_WRIGHT_BOOTSTRAP_IMAGES_ROUNDED="Rounded"
 TPL_JS_WRIGHT_BOOTSTRAP_IMAGES_CIRCLE="Circle"
 TPL_JS_WRIGHT_BOOTSTRAP_IMAGES_POLAROID="Polaroid"
-TPL_JS_WRIGHT_LESS_COMPILE="Compile less files (Experimental)"
+TPL_JS_WRIGHT_LESS_COMPILE="Compile less (Beta)"
 TPL_JS_WRIGHT_LESS_COMPILE_DESC="When selected, on each page refresh less files will be checked for timestamps to see if they have changed and therefore compile them into CSS files"
 
 ; Browser Compatibility
 TPL_JS_WRIGHT_BROWSER_COMPATIBILITY_TITLE="Browser compatibility warning settings"
 TPL_JS_WRIGHT_BROWSER_COMPATIBILITY_TITLE_DESC="Settings for setting up an optional warning when the browser deoesn't meet the requirements of this site"
-TPL_JS_WRIGHT_BROWSER_COMPATIBILITY_SWITCH="Enable browser compatibility warning"
+TPL_JS_WRIGHT_BROWSER_COMPATIBILITY_SWITCH="Browser compatibility warning"
 TPL_JS_WRIGHT_BROWSER_COMPATIBILITY_SWITCH_DESC="When the browser doesn't meet the settings set up below, a warning will be displayed, optionally recommending certain browsers"
 TPL_JS_WRIGHT_BROWSER_COMPATIBILITY="Browser compatibility table"
 TPL_JS_WRIGHT_BROWSER_COMPATIBILITY_DESC="Supported and recommended browsers settings"
