--- a/code/language/en-GB/en-GB.tpl_js_wright.ini
+++ b/code/language/en-GB/en-GB.tpl_js_wright.ini
@@ -8,9 +8,8 @@ TPL_JS_WRIGHT_FIELD_DOCUMENTATION="Documentation"
 TPL_JS_WRIGHT_FIELD_DEFAULT="Template default"
 TPL_JS_WRIGHT_FIELD_NEED_HELP_LABEL="Need Help?"
 TPL_JS_WRIGHT_FIELD_NEED_HELP_DESC="Start reading the Wright documentation"
-TPL_JS_WRIGHT_FIELD_REBRAND_LICENSE="Rebranding requires a license, learn more."
 TPL_JS_WRIGHT_FIELD_REMOVE_BRANDING_LABEL="Remove Branding"
-TPL_JS_WRIGHT_FIELD_REMOVE_BRANDING_DESC="This setting removes the branding from the footer of the template."
+TPL_JS_WRIGHT_FIELD_REMOVE_BRANDING_DESC="This setting removes the branding from the footer of the template. It requires a license."
 TPL_JS_WRIGHT_FIELD_STYLE_LABEL="Style"
 TPL_JS_WRIGHT_FIELD_STYLE_DESC="Select which of the style variations you wish to use."
 TPL_JS_WRIGHT_FIELD_ENABLE_MODAL_LABEL="Load modal behavior"
