--- a/code/language/en-GB/en-GB.tpl_js_wright.ini
+++ b/code/language/en-GB/en-GB.tpl_js_wright.ini
@@ -2,12 +2,9 @@ TPL_JS_WRIGHT="Joomlashack Wright"
 TPL_JS_WRIGHT_XML_DESCRIPTION="<p style='clear:both'><img style='clear:both' src='../templates/js_wright/wright/images/logo.png' /></p><p style='clear:both'>This is the js_wright template by <a target='_blank' href='http://www.joomlashack.com'>Joomlashack</a><br />v.{version}</p>"
 
 ; Fields
-TPL_JS_WRIGHT_POWERED="This is a template powered by the <a target='_blank' href='http://wright.joomlashack.com'>Wright Framework</a>"
+TPL_JS_WRIGHT_POWERED="This template is powered by the <a target='_blank' href='http://wright.joomlashack.com'>Wright Framework</a>"
 TPL_JS_WRIGHT_NONE="None"
-TPL_JS_WRIGHT_FIELD_DOCUMENTATION="Documentation"
 TPL_JS_WRIGHT_FIELD_DEFAULT="Template default"
-TPL_JS_WRIGHT_FIELD_NEED_HELP_LABEL="Need Help?"
-TPL_JS_WRIGHT_FIELD_NEED_HELP_DESC="Start reading the Wright documentation"
 TPL_JS_WRIGHT_FIELD_REMOVE_BRANDING_LABEL="Remove Branding"
 TPL_JS_WRIGHT_FIELD_REMOVE_BRANDING_DESC="This setting removes the branding from the footer of the template. It requires a license."
 TPL_JS_WRIGHT_FIELD_STYLE_LABEL="Style"
