--- a/code/language/en-GB/en-GB.tpl_js_wright.ini
+++ b/code/language/en-GB/en-GB.tpl_js_wright.ini
@@ -6,7 +6,7 @@ TPL_JS_WRIGHT_POWERED="This template is powered by the <a target='_blank' href='
 TPL_JS_WRIGHT_NONE="None"
 TPL_JS_WRIGHT_FIELD_DEFAULT="Template default"
 TPL_JS_WRIGHT_FIELD_REMOVE_BRANDING_LABEL="Remove Branding"
-TPL_JS_WRIGHT_FIELD_REMOVE_BRANDING_DESC="This setting removes the branding from the footer of the template. It requires a license."
+TPL_JS_WRIGHT_FIELD_REMOVE_BRANDING_DESC="This setting removes the branding from the footer of the template. Removing branding requires a license."
 TPL_JS_WRIGHT_FIELD_STYLE_LABEL="Style"
 TPL_JS_WRIGHT_FIELD_STYLE_DESC="Select which of the style variations you wish to use."
 TPL_JS_WRIGHT_FIELD_ENABLE_MODAL_LABEL="Load modal behavior"
