--- a/code/language/en-GB/en-GB.tpl_js_wright.ini
+++ b/code/language/en-GB/en-GB.tpl_js_wright.ini
@@ -57,7 +57,7 @@ TPL_JS_WRIGHT_FIELD_ENABLE_RESPONSIVE="Responsive support"
 TPL_JS_WRIGHT_FIELD_ENABLE_RESPONSIVE_DESC="You can select whether you want to have responsive behavior (mobile/tablet view)"
 TPL_JS_WRIGHT_FIELD_STICKY_FOOTER="Sticky footer"
 TPL_JS_WRIGHT_FIELD_STICKY_FOOTER_DESC="Select whether you want to force the footer to be always at the bottom of the screen"
-TPL_JS_WRIGHT_BOOTSTRAP_IMAGES="Bootstrap for article images"
+TPL_JS_WRIGHT_BOOTSTRAP_IMAGES="Styles for article images"
 TPL_JS_WRIGHT_BOOTSTRAP_IMAGES_DESC="Select if you want to enable your article (intro and full text) images any of the styles available, and grow them to be responsive width/height"
 TPL_JS_WRIGHT_BOOTSTRAP_IMAGES_ROUNDED="Rounded"
 TPL_JS_WRIGHT_BOOTSTRAP_IMAGES_CIRCLE="Circle"
