--- a/code/language/en-GB/en-GB.tpl_js_wright.ini
+++ b/code/language/en-GB/en-GB.tpl_js_wright.ini
@@ -26,14 +26,11 @@ TPL_JS_WRIGHT_FIELD_BODY_FONT_LABEL="Body Font"
 TPL_JS_WRIGHT_FIELD_BODY_FONT_DESC="Select the default font face for the body"
 TPL_JS_WRIGHT_FIELD_HEADING_FONT_LABEL="Heading Font"
 TPL_JS_WRIGHT_FIELD_HEADING_FONT_DESC="Select the default font face for the headers"
-TPL_JS_WRIGHT_FIELD_COLUMNS_LABEL="Columns"
+TPL_JS_WRIGHT_FIELD_COLUMNS_LABEL="Columns size"
 TPL_JS_WRIGHT_FIELD_COLUMNS_DESC="You can set the default widths and arrange the main columns. Any columns that are unused will just be hidden and the main column will be widened."
-TPL_JS_WRIGHT_FIELD_COLUMNS_USING="Using"
-TPL_JS_WRIGHT_FIELD_COLUMNS_OF="of"
-TPL_JS_WRIGHT_FIELD_COLUMNS_WARNING="The total needs to add up to 12"
 TPL_JS_WRIGHT_FIELD_COLUMN_MAIN="Main"
-TPL_JS_WRIGHT_FIELD_COLUMN_SIDEBAR1="Sidebar1"
-TPL_JS_WRIGHT_FIELD_COLUMN_SIDEBAR2="Sidebar2"
+TPL_JS_WRIGHT_FIELD_COLUMN_SIDEBAR1="Left"
+TPL_JS_WRIGHT_FIELD_COLUMN_SIDEBAR2="Right"
 TPL_JS_WRIGHT_FIELD_DOCTYPE_LABEL="Doctype"
 TPL_JS_WRIGHT_FIELD_DOCTYPE_DESC="Select the doctype"
 TPL_JS_WRIGHT_FIELD_DOCTYPE_HTML5="HTML5"
@@ -45,7 +42,7 @@ TPL_JS_WRIGHT_DOCUMENTATION_MODE="Load template docs"
 TPL_JS_WRIGHT_DOCUMENTATION_MODE_DESC="Loads docs.css and prettify.js to enhance documentation either for the template or your own project"
 
 ; Config title
-TPL_JS_WRIGHT_BOOTSTRAP_TITLE_LABEL="Bootstrap settings"
+TPL_JS_WRIGHT_BOOTSTRAP_TITLE_LABEL="<h4>Bootstrap settings</h4>"
 TPL_JS_WRIGHT_BOOTSTRAP_TITLE_DESC="Settings to customize Bootstrap"
 
 ; Bootstrap Fields
@@ -66,7 +63,7 @@ TPL_JS_WRIGHT_LESS_COMPILE="Compile less (Beta)"
 TPL_JS_WRIGHT_LESS_COMPILE_DESC="When selected, on each page refresh less files will be checked for timestamps to see if they have changed and therefore compile them into CSS files"
 
 ; Browser Compatibility
-TPL_JS_WRIGHT_BROWSER_COMPATIBILITY_TITLE="Browser compatibility warning settings"
+TPL_JS_WRIGHT_BROWSER_COMPATIBILITY_TITLE="<h4>Browser compatibility warning settings</h4>"
 TPL_JS_WRIGHT_BROWSER_COMPATIBILITY_TITLE_DESC="Settings for setting up an optional warning when the browser deoesn't meet the requirements of this site"
 TPL_JS_WRIGHT_BROWSER_COMPATIBILITY_SWITCH="Browser compatibility warning"
 TPL_JS_WRIGHT_BROWSER_COMPATIBILITY_SWITCH_DESC="When the browser doesn't meet the settings set up below, a warning will be displayed, optionally recommending certain browsers"
