back configuration of columns

--- a/code/language/en-GB/en-GB.tpl_js_wright.ini
+++ b/code/language/en-GB/en-GB.tpl_js_wright.ini
@@ -28,9 +28,12 @@ TPL_JS_WRIGHT_FIELD_HEADING_FONT_LABEL="Heading Font"
 TPL_JS_WRIGHT_FIELD_HEADING_FONT_DESC="Select the default font face for the headers"
 TPL_JS_WRIGHT_FIELD_COLUMNS_LABEL="Columns size"
 TPL_JS_WRIGHT_FIELD_COLUMNS_DESC="You can set the default widths and arrange the main columns. Any columns that are unused will just be hidden and the main column will be widened."
+TPL_JS_WRIGHT_FIELD_COLUMNS_USING="Using"
+TPL_JS_WRIGHT_FIELD_COLUMNS_OF="of"
+TPL_JS_WRIGHT_FIELD_COLUMNS_WARNING="The total needs to add up to 12"
 TPL_JS_WRIGHT_FIELD_COLUMN_MAIN="Main"
-TPL_JS_WRIGHT_FIELD_COLUMN_SIDEBAR1="Left"
-TPL_JS_WRIGHT_FIELD_COLUMN_SIDEBAR2="Right"
+TPL_JS_WRIGHT_FIELD_COLUMN_SIDEBAR1="Sidebar1"
+TPL_JS_WRIGHT_FIELD_COLUMN_SIDEBAR2="Sidebar2"
 TPL_JS_WRIGHT_FIELD_DOCTYPE_LABEL="Doctype"
 TPL_JS_WRIGHT_FIELD_DOCTYPE_DESC="Select the doctype"
 TPL_JS_WRIGHT_FIELD_DOCTYPE_HTML5="HTML5"
