Mobile menu icon #364

--- a/code/language/en-GB/en-GB.tpl_js_wright.ini
+++ b/code/language/en-GB/en-GB.tpl_js_wright.ini
@@ -84,3 +84,7 @@ TPL_JS_WRIGHT_BROWSER_WARNING_CONCLUSION="Continuing may result in unexpected be
 TPL_JS_WRIGHT_BROWSER_WARNING_BUTTON="I understand"
 TPL_JS_WRIGHT_BROWSER_WARNING_VERSION="v.%s and up"
 TPL_JS_WRIGHT_BROWSER_WARNING_RECOMMENDED="recommended"
+
+; Mobile Menu
+TPL_JS_WRIGHT_MOBILE_MENU_TEXT="Mobile Menu text"
+TPL_JS_WRIGHT_MOBILE_MENU_TEXT_DESC="Replace hamburger icon with a label"
