--- a/code/language/en-GB/en-GB.tpl_js_wright.ini
+++ b/code/language/en-GB/en-GB.tpl_js_wright.ini
@@ -86,5 +86,7 @@ TPL_JS_WRIGHT_BROWSER_WARNING_VERSION="v.%s and up"
 TPL_JS_WRIGHT_BROWSER_WARNING_RECOMMENDED="recommended"
 
 ; Mobile Menu
+TPL_JS_WRIGHT_MOBILE_MENU_TITLE_LABEL="<h4>Mobile Menu</h4>"
+TPL_JS_WRIGHT_MOBILE_MENU_TITLE_LABEL_DESC="Settings to customize Mobile Menu"
 TPL_JS_WRIGHT_MOBILE_MENU_TEXT="Mobile Menu text"
-TPL_JS_WRIGHT_MOBILE_MENU_TEXT_DESC="Replace hamburger icon with a label"
+TPL_JS_WRIGHT_MOBILE_MENU_TEXT_DESC="Replace hamburger icon to a label"
