--- a/src/language/en-GB/en-GB.tpl_js_wright.ini
+++ b/src/language/en-GB/en-GB.tpl_js_wright.ini
@@ -26,7 +26,7 @@ TPL_JS_WRIGHT_FIELD_COLUMNS_LABEL="Columns size"
 TPL_JS_WRIGHT_FIELD_COLUMNS_DESC="You can set the default widths and arrange the main columns. Any columns that are unused will just be hidden and the main column will be widened."
 TPL_JS_WRIGHT_FIELD_COLUMNS_USING="Using"
 TPL_JS_WRIGHT_FIELD_COLUMNS_OF="of"
-TPL_JS_WRIGHT_FIELD_COLUMNS_WARNING="The total needs to add up to 12"
+TPL_JS_WRIGHT_FIELD_COLUMNS_WARNING="The total number of columns should add up to 12"
 TPL_JS_WRIGHT_FIELD_COLUMN_MAIN="Main"
 TPL_JS_WRIGHT_FIELD_COLUMN_SIDEBAR1="Sidebar1"
 TPL_JS_WRIGHT_FIELD_COLUMN_SIDEBAR2="Sidebar2"
