--- a/src/language/de-DE/de-DE.tpl_js_wright.ini
+++ b/src/language/de-DE/de-DE.tpl_js_wright.ini
@@ -60,3 +60,9 @@ TPL_JS_WRIGHT_BOOTSTRAP_IMAGES_DESC="Wähle, ob auf deine Bilder in Artikeln (Ei
 TPL_JS_WRIGHT_BOOTSTRAP_IMAGES_ROUNDED="Abgerundet"
 TPL_JS_WRIGHT_BOOTSTRAP_IMAGES_CIRCLE="Kreis"
 TPL_JS_WRIGHT_BOOTSTRAP_IMAGES_POLAROID="Polaroid"
+
+; Mobiles Menü
+TPL_JS_WRIGHT_MOBILE_MENU_TITLE_LABEL="<h4>Mobiles Menü</h4>"
+TPL_JS_WRIGHT_MOBILE_MENU_TITLE_DESC="Einstellungen zum Anpassen des Mobile-Menüs"
+TPL_JS_WRIGHT_MOBILE_MENU_TEXT="Mobiler Menütext"
+TPL_JS_WRIGHT_MOBILE_MENU_TEXT_DESC="Ersetzen Sie das Hamburger-Symbol durch ein Etikett"
