--- a/src/language/en-GB/en-GB.tpl_js_wright.ini
+++ b/src/language/en-GB/en-GB.tpl_js_wright.ini
@@ -61,4 +61,4 @@ TPL_JS_WRIGHT_BOOTSTRAP_IMAGES_POLAROID="Polaroid"
 TPL_JS_WRIGHT_MOBILE_MENU_TITLE_LABEL="<h4>Mobile Menu</h4>"
 TPL_JS_WRIGHT_MOBILE_MENU_TITLE_DESC="Settings to customize Mobile Menu"
 TPL_JS_WRIGHT_MOBILE_MENU_TEXT="Mobile Menu text"
-TPL_JS_WRIGHT_MOBILE_MENU_TEXT_DESC="Replace hamburger icon to a label"
+TPL_JS_WRIGHT_MOBILE_MENU_TEXT_DESC="Replace hamburger icon with a label"
