Add language constants for module positions

--- a/src/language/es-ES/es-ES.tpl_js_wright.ini
+++ b/src/language/es-ES/es-ES.tpl_js_wright.ini
@@ -61,8 +61,28 @@ TPL_JS_WRIGHT_BOOTSTRAP_IMAGES_ROUNDED="Redondeado"
 TPL_JS_WRIGHT_BOOTSTRAP_IMAGES_CIRCLE="Círculo"
 TPL_JS_WRIGHT_BOOTSTRAP_IMAGES_POLAROID="Polaroid"
 
-; Mobile Menu
+; Menu móvil
 TPL_JS_WRIGHT_MOBILE_MENU_TITLE_LABEL="<h4>Menu Móvil</h4>"
 TPL_JS_WRIGHT_MOBILE_MENU_TITLE_DESC="Configuración para personalizar el menú móvil"
 TPL_JS_WRIGHT_MOBILE_MENU_TEXT="Texto del menú móvil"
 TPL_JS_WRIGHT_MOBILE_MENU_TEXT_DESC="Sustituir icono de hamburguesa por texto"
+
+; Posiciones de módulos
+TPL_JS_WRIGHT_POSITION_TOOLBAR="toolbar"
+TPL_JS_WRIGHT_POSITION_LOGO="logo"
+TPL_JS_WRIGHT_POSITION_TOP="top"
+TPL_JS_WRIGHT_POSITION_TOP2="top2"
+TPL_JS_WRIGHT_POSITION_MENU="menu"
+TPL_JS_WRIGHT_POSITION_FEATURED="featured"
+TPL_JS_WRIGHT_POSITION_GRID-TOP="grid-top"
+TPL_JS_WRIGHT_POSITION_GRID-TOP2="grid-top2"
+TPL_JS_WRIGHT_POSITION_ABOVE-CONTENT="above-content"
+TPL_JS_WRIGHT_POSITION_BREADCRUMBS="breadcrumbs"
+TPL_JS_WRIGHT_POSITION_SIDEBAR1="sidebar1"
+TPL_JS_WRIGHT_POSITION_SIDEBAR2="sidebar2"
+TPL_JS_WRIGHT_POSITION_BELOW-CONTENT="below-content"
+TPL_JS_WRIGHT_POSITION_GRID-BOTTOM="grid-bottom"
+TPL_JS_WRIGHT_POSITION_GRID-BOTTOM2="grid-bottom2"
+TPL_JS_WRIGHT_POSITION_BOTTOM-MENU="bottom-menu"
+TPL_JS_WRIGHT_POSITION_FOOTER="footer"
+TPL_JS_WRIGHT_POSITION_DEBUG="debug"
