--- a/src/language/de-DE/de-DE.tpl_js_wright.ini
+++ b/src/language/de-DE/de-DE.tpl_js_wright.ini
@@ -66,3 +66,23 @@ TPL_JS_WRIGHT_MOBILE_MENU_TITLE_LABEL="<h4>Mobiles Menü</h4>"
 TPL_JS_WRIGHT_MOBILE_MENU_TITLE_DESC="Einstellungen zum Anpassen des Mobile-Menüs"
 TPL_JS_WRIGHT_MOBILE_MENU_TEXT="Mobiler Menütext"
 TPL_JS_WRIGHT_MOBILE_MENU_TEXT_DESC="Ersetzen Sie das Hamburger-Symbol durch ein Etikett"
+
+; Modulpositionen
+TPL_JS_WRIGHT_POSITION_TOOLBAR="toolbar"
+TPL_JS_WRIGHT_POSITION_LOGO="logo"
+TPL_JS_WRIGHT_POSITION_TOP="top"
+TPL_JS_WRIGHT_POSITION_TOP2="top2"
+TPL_JS_WRIGHT_POSITION_MENU="menu"
+TPL_JS_WRIGHT_POSITION_FEATURED="featured"
+TPL_JS_WRIGHT_POSITION_GRID-TOP="grid-top"
+TPL_JS_WRIGHT_POSITION_GRID-TOP2="grid-top2"
+TPL_JS_WRIGHT_POSITION_ABOVE-CONTENT="above-content"
+TPL_JS_WRIGHT_POSITION_BREADCRUMBS="breadcrumbs"
+TPL_JS_WRIGHT_POSITION_SIDEBAR1="sidebar1"
+TPL_JS_WRIGHT_POSITION_SIDEBAR2="sidebar2"
+TPL_JS_WRIGHT_POSITION_BELOW-CONTENT="below-content"
+TPL_JS_WRIGHT_POSITION_GRID-BOTTOM="grid-bottom"
+TPL_JS_WRIGHT_POSITION_GRID-BOTTOM2="grid-bottom2"
+TPL_JS_WRIGHT_POSITION_BOTTOM-MENU="bottom-menu"
+TPL_JS_WRIGHT_POSITION_FOOTER="footer"
+TPL_JS_WRIGHT_POSITION_DEBUG="debug"
