Optimize language strings about bootstrap

--- a/src/language/de-DE/de-DE.tpl_js_wright.ini
+++ b/src/language/de-DE/de-DE.tpl_js_wright.ini
@@ -43,14 +43,14 @@ TPL_JS_WRIGHT_DOCUMENTATION_MODE="Aktivieren Vorlage Dokumentation Modus"
 TPL_JS_WRIGHT_DOCUMENTATION_MODE_DESC="Lasten docs.css und prettify.js die Dokumentation entweder zu verstärken für die Vorlage oder Ihr eigenes Projekt"
 
 ; Konfigurationstitel
-TPL_JS_WRIGHT_BOOTSTRAP_TITLE_LABEL="Bootstrap Einstellungen"
-TPL_JS_WRIGHT_BOOTSTRAP_TITLE_DESC="Einstellungen um Bootstrap anzupassen"
+TPL_JS_WRIGHT_BOOTSTRAP_TITLE_LABEL="<h4>Layout Einstellungen</h4>"
+TPL_JS_WRIGHT_BOOTSTRAP_TITLE_DESC="Einstellungen zum Anpassen des Layouts"
 
 ; Bootstrap Felder
-TPL_JS_WRIGHT_FIELD_BOOTSTRAP_ROW_MODE_LABEL="Bootstrap Tabellenmodus"
-TPL_JS_WRIGHT_FIELD_BOOTSTRAP_ROW_MODE_DESC="Das Template arbeitet entweder mit einer 960px Tabelle (px) oder nutzt eine fliessende Tabelle (%)"
-TPL_JS_WRIGHT_FIELD_BOOTSTRAP_ROW_MODE_FLUID="Fliessend (%)"
-TPL_JS_WRIGHT_FIELD_BOOTSTRAP_ROW_MODE_DEFAULT="Standard (px)"
+TPL_JS_WRIGHT_FIELD_BOOTSTRAP_ROW_MODE_LABEL="Layout Rastermodus"
+TPL_JS_WRIGHT_FIELD_BOOTSTRAP_ROW_MODE_DESC="Die Vorlage kann entweder in einem Box-Layout oder im Vollbreitenmodus arbeiten"
+TPL_JS_WRIGHT_FIELD_BOOTSTRAP_ROW_MODE_FLUID="Gesamtbreite"
+TPL_JS_WRIGHT_FIELD_BOOTSTRAP_ROW_MODE_DEFAULT="Boxen"
 TPL_JS_WRIGHT_FIELD_STICKY_FOOTER="Fixierte Fusszeile"
 TPL_JS_WRIGHT_FIELD_STICKY_FOOTER_DESC="Entscheide, ob du die Fusszeile dazu zwingen willst, dass sie immer am Ende der Seite erscheint"
 TPL_JS_WRIGHT_BOOTSTRAP_IMAGES="Bootstrap Gestaltung für Artikelbilder"
