--- a/src/language/en-GB/en-GB.tpl_js_wright.ini
+++ b/src/language/en-GB/en-GB.tpl_js_wright.ini
@@ -39,14 +39,14 @@ TPL_JS_WRIGHT_DOCUMENTATION_MODE="Load template docs"
 TPL_JS_WRIGHT_DOCUMENTATION_MODE_DESC="Loads docs.css and prettify.js to enhance documentation either for the template or your own project"
 
 ; Config title
-TPL_JS_WRIGHT_BOOTSTRAP_TITLE_LABEL="<h4>Bootstrap settings</h4>"
-TPL_JS_WRIGHT_BOOTSTRAP_TITLE_DESC="Settings to customize Bootstrap"
+TPL_JS_WRIGHT_BOOTSTRAP_TITLE_LABEL="<h4>Layout settings</h4>"
+TPL_JS_WRIGHT_BOOTSTRAP_TITLE_DESC="Settings to customize the layout"
 
 ; Bootstrap Fields
-TPL_JS_WRIGHT_FIELD_BOOTSTRAP_ROW_MODE_LABEL="Bootstrap grid mode"
-TPL_JS_WRIGHT_FIELD_BOOTSTRAP_ROW_MODE_DESC="The template can work either in a 960px grid (px) or using a fluid grid (%)"
-TPL_JS_WRIGHT_FIELD_BOOTSTRAP_ROW_MODE_FLUID="Fluid (%)"
-TPL_JS_WRIGHT_FIELD_BOOTSTRAP_ROW_MODE_DEFAULT="Default (px)"
+TPL_JS_WRIGHT_FIELD_BOOTSTRAP_ROW_MODE_LABEL="Layout grid mode"
+TPL_JS_WRIGHT_FIELD_BOOTSTRAP_ROW_MODE_DESC="The template can work either in a boxed layout or in full width mode"
+TPL_JS_WRIGHT_FIELD_BOOTSTRAP_ROW_MODE_FLUID="Full width"
+TPL_JS_WRIGHT_FIELD_BOOTSTRAP_ROW_MODE_DEFAULT="Boxed"
 TPL_JS_WRIGHT_FIELD_STICKY_FOOTER="Sticky footer"
 TPL_JS_WRIGHT_FIELD_STICKY_FOOTER_DESC="Select whether you want to force the footer to be always at the bottom of the screen"
 TPL_JS_WRIGHT_BOOTSTRAP_IMAGES="Styles for article images"
