--- a/src/language/es-ES/es-ES.tpl_js_wright.ini
+++ b/src/language/es-ES/es-ES.tpl_js_wright.ini
@@ -43,14 +43,14 @@ TPL_JS_WRIGHT_DOCUMENTATION_MODE="Habilitar modo documentación"
 TPL_JS_WRIGHT_DOCUMENTATION_MODE_DESC="Carga los archivos docs.css y prettify.js para documentación de la plantilla o su propio proyecto"
 
 ; Título de configuración
-TPL_JS_WRIGHT_BOOTSTRAP_TITLE_LABEL="Ajustes de Bootstrap"
-TPL_JS_WRIGHT_BOOTSTRAP_TITLE_DESC="Ajustes para personalizar Bootstrap"
+TPL_JS_WRIGHT_BOOTSTRAP_TITLE_LABEL="<h4>Ajustes de diseño</h4>"
+TPL_JS_WRIGHT_BOOTSTRAP_TITLE_DESC="Ajustes para personalizar el diseño"
 
 ; Campos Bootstrap
-TPL_JS_WRIGHT_FIELD_BOOTSTRAP_ROW_MODE_LABEL="Modo de la grilla de bootstrap"
-TPL_JS_WRIGHT_FIELD_BOOTSTRAP_ROW_MODE_DESC="La plantilla puede funcionar en una grilla de 960px (px) o en una grilla fluída (%)"
-TPL_JS_WRIGHT_FIELD_BOOTSTRAP_ROW_MODE_FLUID="Fluida (%)"
-TPL_JS_WRIGHT_FIELD_BOOTSTRAP_ROW_MODE_DEFAULT="Por defecto (px)"
+TPL_JS_WRIGHT_FIELD_BOOTSTRAP_ROW_MODE_LABEL="Formato de diseño"
+TPL_JS_WRIGHT_FIELD_BOOTSTRAP_ROW_MODE_DESC="La plantilla puede funcionar en un diseño de caja o en modo de ancho completo"
+TPL_JS_WRIGHT_FIELD_BOOTSTRAP_ROW_MODE_FLUID="Ancho completo"
+TPL_JS_WRIGHT_FIELD_BOOTSTRAP_ROW_MODE_DEFAULT="Caja"
 TPL_JS_WRIGHT_FIELD_STICKY_FOOTER="Pie de página fijo"
 TPL_JS_WRIGHT_FIELD_STICKY_FOOTER_DESC="Seleccione si quiere que el pie de página siempre esté al final de la pantalla"
 TPL_JS_WRIGHT_BOOTSTRAP_IMAGES="Estilos Bootstrap para imágenes de artículos"
