Image classes from BS4

--- a/src/language/en-GB/en-GB.tpl_js_wright.ini
+++ b/src/language/en-GB/en-GB.tpl_js_wright.ini
@@ -52,6 +52,8 @@ TPL_JS_WRIGHT_BOOTSTRAP_IMAGES_DESC="Select if you want to enable your article (
 TPL_JS_WRIGHT_BOOTSTRAP_IMAGES_ROUNDED="Rounded"
 TPL_JS_WRIGHT_BOOTSTRAP_IMAGES_CIRCLE="Circle"
 TPL_JS_WRIGHT_BOOTSTRAP_IMAGES_POLAROID="Polaroid"
+TPL_JS_WRIGHT_BOOTSTRAP_IMAGES_THUMBNAIL="Thumbnail (BS4)"
+TPL_JS_WRIGHT_BOOTSTRAP_IMAGES_ROUNDED2="Rounded (BS4)"
 
 ; Mobile Menu
 TPL_JS_WRIGHT_MOBILE_MENU_TITLE_LABEL="<h4>Mobile Menu</h4>"
