--- a/src/language/de-DE/de-DE.tpl_js_wright.ini
+++ b/src/language/de-DE/de-DE.tpl_js_wright.ini
@@ -1,5 +1,5 @@
 TPL_JS_WRIGHT="Joomlashack Wright"
-TPL_JS_WRIGHT_XML_DESCRIPTION="<p style='clear:both'><img style='clear:both' src='../templates/js_wright/wright/images/logo.png' /></p><p style='clear:both'>Dies ist das js_wright Template von <a target='_blank' href='http://www.joomlashack.com'>Joomlashack</a><br />v.{version}</p>"
+TPL_JS_WRIGHT_XML_DESCRIPTION="<p style='clear:both'><img style='clear:both' src='../templates/js_wright/wright/images/logo.png' /></p><p style='clear:both'>Dies ist das Wright Template von <a target='_blank' href='http://www.joomlashack.com'>Joomlashack</a><br />v.{version}</p>"
 
 ; Felder
 TPL_JS_WRIGHT_POWERED="Dies ist eine Vorlage angetrieben durch von <a target='_blank' href='http://wright.joomlashack.com'>Wright Framework</a>"
