--- a/src/language/es-ES/es-ES.tpl_js_wright.sys.ini
+++ b/src/language/es-ES/es-ES.tpl_js_wright.sys.ini
@@ -1,3 +1,3 @@
 TPL_JS_WRIGHT="Joomlashack Wright"
-TPL_JS_WRIGHT_XML_DESCRIPTION="<p style='clear:both'><img style='clear:both' src='../templates/js_wright/wright/images/logo.png' /></p><p style='clear:both'>Esta es la plantilla js_wright desarrollada por <a target='_blank' href='http://www.joomlashack.com'>Joomlashack</a><br />v.{version}</p>
-<p style='clear:both'>Gracias por instalar la plantilla js_wright.  Ahora puede dirigirse al <a href='index.php?option=com_templates'>Administrador de Plantillas</a> para configurarla.</p>"
+TPL_JS_WRIGHT_XML_DESCRIPTION="<p style='clear:both'><img style='clear:both' src='../templates/js_wright/wright/images/logo.png' /></p><p style='clear:both'>Esta es la plantilla Wright de <a target='_blank' href='http://www.joomlashack.com'>Joomlashack</a>. Esta plantilla es impulsada por el Framework Wright.<br />v.{version}</p>
+<p style='clear:both'>Gracias por instalar la plantilla Wright.  Ahora puede dirigirse al <a href='index.php?option=com_templates'>Administrador de Plantillas</a> para configurarla.</p>"
