--- a/src/language/de-DE/de-DE.tpl_js_wright.sys.ini
+++ b/src/language/de-DE/de-DE.tpl_js_wright.sys.ini
@@ -1,3 +1,3 @@
 TPL_JS_WRIGHT="Joomlashack Wright"
-TPL_JS_WRIGHT_XML_DESCRIPTION="<p style='clear:both'><img style='clear:both;width:160px;height:auto;' src='../templates/js_wright/wright/images/logo.png' /></p><p style='clear:both'>Dies ist das js_wright Template von <a target='_blank' href='http://www.joomlashack.com'>Joomlashack</a><br />v.{version}</p>
-<p style='clear:both'>Vielen Dank für die Installation der js_wright vorlage.  Gehe zu <a href='index.php?option=com_templates'>Vorlagen</a>, um es zu konfigurieren.</p>"
+TPL_JS_WRIGHT_XML_DESCRIPTION="<p style='clear:both'><img style='clear:both;width:160px;height:auto;' src='../templates/js_wright/wright/images/logo.png' /></p><p style='clear:both'>Dies ist das Wright Template von <a target='_blank' href='http://www.joomlashack.com'>Joomlashack</a><br />v.{version}</p>
+<p style='clear:both'>Vielen Dank für die Installation der Wright vorlage. Gehe zu <a href='index.php?option=com_templates'>Vorlagen</a>, um es zu konfigurieren.</p>"
