--- a/src/language/en-GB/en-GB.tpl_js_wright.ini
+++ b/src/language/en-GB/en-GB.tpl_js_wright.ini
@@ -1,5 +1,5 @@
 TPL_JS_WRIGHT="Joomlashack Wright"
-TPL_JS_WRIGHT_XML_DESCRIPTION="<p style='clear:both'><img style='clear:both' src='../templates/js_wright/wright/images/logo.png' /></p><p style='clear:both'>This is the Wright template from <a target='_blank' href='http://www.joomlashack.com'>Joomlashack</a>. This template is powered by the Wright Framework.<br />v.{version}</p>"
+TPL_JS_WRIGHT_XML_DESCRIPTION="<p style='clear:both'><img style='clear:both' src='../templates/js_wright/wright/images/logo.png' /></p><p style='clear:both'>This is the Wright template from <a target='_blank' href='http://www.joomlashack.com'>Joomlashack</a>. This template is powered by the <a target='_blank' href='http://wright.joomlashack.com'>Wright Framework</a>.<br />v.{version}</p>"
 
 ; Fields
 TPL_JS_WRIGHT_POWERED="This template is powered by the <a target='_blank' href='http://wright.joomlashack.com'>Wright Framework</a>"
