--- a/src/language/en-GB/en-GB.tpl_js_wright.sys.ini
+++ b/src/language/en-GB/en-GB.tpl_js_wright.sys.ini
@@ -1,4 +1,4 @@
 TPL_JS_WRIGHT="Joomlashack Wright"
 TPL_JS_WRIGHT_XML_DESCRIPTION="<p style='clear:both'><img style='clear:both' src='../templates/js_wright/wright/images/logo.png' /></p>
-<p style='clear:both'>This is the Wright template from <a target='_blank' href='http://www.joomlashack.com'>Joomlashack</a>. This template is powered by the Wright Framework.<br />v.{version}</p>
+<p style='clear:both'>This is the Wright template from <a target='_blank' href='http://www.joomlashack.com'>Joomlashack</a>. This template is powered by the <a target='_blank' href='http://wright.joomlashack.com'>Wright Framework</a>.<br />v.{version}</p>
 <p style='clear:both'>Thanks for installing the Wright template.  Now you can go to the <a href='index.php?option=com_templates'>Template Manager</a> to configure it.</p>"
