Add link to wright site in spanish version

--- a/src/language/es-ES/es-ES.tpl_js_wright.ini
+++ b/src/language/es-ES/es-ES.tpl_js_wright.ini
@@ -1,5 +1,5 @@
 TPL_JS_WRIGHT="Joomlashack Wright"
-TPL_JS_WRIGHT_XML_DESCRIPTION="<p style='clear:both'><img style='clear:both' src='../templates/js_wright/wright/images/logo.png' /></p><p style='clear:both'>Esta es la plantilla Wright de <a target='_blank' href='http://www.joomlashack.com'>Joomlashack</a>. Esta plantilla está construida con el Framework Wright.<br />v.{version}</p>"
+TPL_JS_WRIGHT_XML_DESCRIPTION="<p style='clear:both'><img style='clear:both' src='../templates/js_wright/wright/images/logo.png' /></p><p style='clear:both'>Esta es la plantilla Wright de <a target='_blank' href='http://www.joomlashack.com'>Joomlashack</a>. Esta plantilla está construida con el <a target='_blank' href='http://wright.joomlashack.com/'>Framework Wright</a>.<br />v.{version}</p>"
 
 ; Campos
 TPL_JS_WRIGHT_POWERED="Esta es una plantilla construida con el <a target='_blank' href='http://wright.joomlashack.com'>Framework Wright</a>"
