Missing languange constants and fix custom style duplication on the select box

--- a/src/language/en-GB/en-GB.tpl_js_wright.ini
+++ b/src/language/en-GB/en-GB.tpl_js_wright.ini
@@ -62,3 +62,7 @@ TPL_JS_WRIGHT_MOBILE_MENU_TITLE_LABEL="<h4>Mobile Menu</h4>"
 TPL_JS_WRIGHT_MOBILE_MENU_TITLE_DESC="Settings to customize Mobile Menu"
 TPL_JS_WRIGHT_MOBILE_MENU_TEXT="Mobile Menu text"
 TPL_JS_WRIGHT_MOBILE_MENU_TEXT_DESC="Replace hamburger icon to a label"
+
+; Styles
+TPL_JS_WRIGHT_CUSTOM_STYLE="Custom"
+TPL_JS_WRIGHT_NO_STYLES="No styles are provided for this template"
