--- a/src/language/en-GB/en-GB.tpl_js_wright.ini
+++ b/src/language/en-GB/en-GB.tpl_js_wright.ini
@@ -9,6 +9,8 @@ TPL_JS_WRIGHT_FIELD_REMOVE_BRANDING_LABEL="Remove Branding"
 TPL_JS_WRIGHT_FIELD_REMOVE_BRANDING_DESC="This setting removes the JoomlaShack logo from the footer of the template."
 TPL_JS_WRIGHT_FIELD_STYLE_LABEL="Style"
 TPL_JS_WRIGHT_FIELD_STYLE_DESC="Select which of the style variations you wish to use."
+TPL_JS_WRIGHT_FIELD_STYLE_LINK_COLOR_LABEL="Color scheme"
+TPL_JS_WRIGHT_FIELD_STYLE_LINK_COLOR_DESC="Choose a custom color scheme"
 TPL_JS_WRIGHT_FIELD_ENABLE_MODAL_LABEL="Load modal behavior"
 TPL_JS_WRIGHT_FIELD_ENABLE_MODAL_DESC="Use the modal class in any link tag to open up pop ups instead of new windows"
 TPL_JS_WRIGHT_FIELD_LOGO_IMAGE_LABEL="Logo Image"
