--- a/src/language/en-GB/en-GB.tpl_js_wright.ini
+++ b/src/language/en-GB/en-GB.tpl_js_wright.ini
@@ -68,3 +68,6 @@ TPL_JS_WRIGHT_MOBILE_MENU_TEXT_DESC="Replace hamburger icon to a label"
 ; Styles
 TPL_JS_WRIGHT_CUSTOM_STYLE="Custom"
 TPL_JS_WRIGHT_NO_STYLES="No styles are provided for this template"
+
+; Compile LESS
+TPL_JS_WRIGHT_COMPILE_LESS="Save and Compile LESS"
