Improve success/error display

--- a/src/language/en-GB/en-GB.tpl_js_wright.ini
+++ b/src/language/en-GB/en-GB.tpl_js_wright.ini
@@ -70,4 +70,6 @@ TPL_JS_WRIGHT_CUSTOM_STYLE="Custom"
 TPL_JS_WRIGHT_NO_STYLES="No styles are provided for this template"
 
 ; Compile LESS
-TPL_JS_WRIGHT_COMPILE_LESS="Save and Compile LESS"
+TPL_JS_WRIGHT_COMPILE_LESS="Compile LESS to CSS"
+TPL_JS_WRIGHT_COMPILE_LESS_ERROR="There was an error!"
+TPL_JS_WRIGHT_COMPILE_LESS_SUCCESS="Custom style compiled!"
