Missing language strings for spanish and german laguages

--- a/src/language/de-DE/de-DE.tpl_js_wright.ini
+++ b/src/language/de-DE/de-DE.tpl_js_wright.ini
@@ -60,3 +60,18 @@ TPL_JS_WRIGHT_BOOTSTRAP_IMAGES_DESC="Wähle, ob auf deine Bilder in Artikeln (Ei
 TPL_JS_WRIGHT_BOOTSTRAP_IMAGES_ROUNDED="Abgerundet"
 TPL_JS_WRIGHT_BOOTSTRAP_IMAGES_CIRCLE="Kreis"
 TPL_JS_WRIGHT_BOOTSTRAP_IMAGES_POLAROID="Polaroid"
+
+; Mobile Menü
+TPL_JS_WRIGHT_MOBILE_MENU_TITLE_LABEL="<h4>Mobile Menü</h4>"
+TPL_JS_WRIGHT_MOBILE_MENU_TITLE_DESC="Einstellungen zum Anpassen des Mobile-Menüs"
+TPL_JS_WRIGHT_MOBILE_MENU_TEXT="Handy-Menütext"
+TPL_JS_WRIGHT_MOBILE_MENU_TEXT_DESC="Ersetzen Sie das Hamburger Symbol in ein Etikett"
+
+; Styles
+TPL_JS_WRIGHT_CUSTOM_STYLE="Brauch"
+TPL_JS_WRIGHT_NO_STYLES="Für diese Vorlage werden keine Stile bereitgestellt"
+
+; Compile LESS
+TPL_JS_WRIGHT_COMPILE_LESS="LESS zu CSS kompilieren"
+TPL_JS_WRIGHT_COMPILE_LESS_ERROR="Es gab einen Fehler!"
+TPL_JS_WRIGHT_COMPILE_LESS_SUCCESS="Custom Style zusammengestellt!"
