--- a/src/language/es-ES/es-ES.tpl_js_wright.ini
+++ b/src/language/es-ES/es-ES.tpl_js_wright.ini
@@ -66,3 +66,12 @@ TPL_JS_WRIGHT_MOBILE_MENU_TITLE_LABEL="<h4>Menu Móvil</h4>"
 TPL_JS_WRIGHT_MOBILE_MENU_TITLE_DESC="Configuración para personalizar el menú móvil"
 TPL_JS_WRIGHT_MOBILE_MENU_TEXT="Texto del menú móvil"
 TPL_JS_WRIGHT_MOBILE_MENU_TEXT_DESC="Sustituir icono de hamburguesa por texto"
+
+; Styles
+TPL_JS_WRIGHT_CUSTOM_STYLE="Personalizado"
+TPL_JS_WRIGHT_NO_STYLES="No hay estilos para esta plantilla"
+
+; Compile LESS
+TPL_JS_WRIGHT_COMPILE_LESS="Compilar LESS a CSS"
+TPL_JS_WRIGHT_COMPILE_LESS_ERROR="¡Ha habido un error!"
+TPL_JS_WRIGHT_COMPILE_LESS_SUCCESS="¡Estilo personalizado compilado!"
