--- a/src/language/en-GB/en-GB.tpl_js_wright.ini
+++ b/src/language/en-GB/en-GB.tpl_js_wright.ini
@@ -73,3 +73,5 @@ TPL_JS_WRIGHT_NO_STYLES="No styles are provided for this template"
 TPL_JS_WRIGHT_COMPILE_LESS="Compile LESS to CSS"
 TPL_JS_WRIGHT_COMPILE_LESS_ERROR="There was an error!"
 TPL_JS_WRIGHT_COMPILE_LESS_SUCCESS="Custom style compiled!"
+TPL_JS_WRIGHT_COMPILE_LESS_IMPORTANT="Important!"
+TPL_JS_WRIGHT_COMPILE_LESS_INSTRUCTIONS="If you change any of the colors above, save changes first, then click this button to rebuild the CSS"
